--- a/01-shishuo.Rmd
+++ b/01-shishuo.Rmd
@@ -1,11 +1,10 @@
-# 序 {-}  
+# 序 {-#Intro}  
 白天，我常常是在写讲话稿和公文。晚上，一般就是打游戏和看书了。现在在玩《精忠报国岳飞传》，令人绝望的游戏，陆陆续续打了有一年了吧，即使用了修改器还是反反复复save-load，所以不但不能弥补工作中缺乏的成就感，反而更加郁闷。  
 君子疾没世而名不称，为了使自己活得更有意义些，总得找点事干，我突然打算在网上对《世说新语》进行解释。当然，有不少学者对《世说新语》进行了校注、笺疏，似乎没有必要重复劳动，不过这些学者的书籍多为繁体竖排本，多用文言，对普通人阅读有一定的障碍；其次，有一些译注或考虑版权问题，白话本的翻译往往过于简单、丧失文雅，不能很好地使读者了解人物、故事的背景，使《世说》成为平淡的书，不能让人满意；还有，《世说》人物繁多，又常常变换使用名、字、封地、号什么的，让普通读者摸不着头脑。而我恰巧少年时期在书籍中度过，又陆续收集了几十本关于魏晋的书，现在又有互联网搜索的便利，吾乡有句谚语：“山高高不过树，路长长不过步”，即使我写的再不如人意，但比从前的总有些优势。这些因素使我下了这个决心。当然，还有一个小小的愿望，我的孩子平时是由母亲和妻子抚养，除了休息日，我甚至很少和他见面，他的童年比我更加贫乏和封闭，我注释《世说》，希望他在长大一点后阅读，从而理解他的父亲，对现实世界保持一定的热情和一定的距离。每个人都走在各自的路上，即使我这点愿望或许是泡影，但总得做出一点努力。  
 所以，这本网络书首先献给我的孩子和那些怀着我一样想法的父亲；其次献给一位厦门的网友，她看着我打字已有三年时间，我颇为感激；最后要献给我的父亲，他让我的童年在图书馆长大，并从不吝啬地满足我购买书籍的要求（居然包括古代艳情小说。现在回忆起来，是多么古怪的父亲！），尽管现在他已经退休回老家种菜，似乎再也不看书了。  
 在写作过程中，网友们给了我鼓励，希望我不要做下面没有的人。是啊，大多数人总是希望做事善始善终，我也多么希望在一两年后，通过打字得到内心的满足，最后喊出“Game over”，再开始另一场追逐。  
 
-# 德行  
-
+# 德行 {#01}  
 ## 1.1  
 >陈仲举言为士则，行为世范,登车揽辔，有澄清天下之志。为豫章太守，至，便问徐孺子所在，欲先看之。主簿白：“群情欲府君先入廨。”陈曰：“武王式商容之闾，席不暇暖。吾之礼贤，有何不可！”  
 
@@ -587,9 +586,8 @@
 《世说》中的德行内容，大约都是以孔子门下以德行著称的学生为范本。颜回“一箪食、一瓢饮、在陋巷，不改其乐”，闵损对后母很孝顺，父亲要休妻，他劝说“母在一子寒，母去三子单”（后母又生了两个孩子），并且视官职、金钱“如坛土矣”，冉耕尊师重道，冉雍“通则一天下，穷则独立贵名，天不能死，地不能埋，桀跖之世不能污”，有南面而为诸侯大宰的能力。这一些关于道德的内容，大体就反映在这一章节中。当然，颜回的木讷和善于吹捧，闵损的受虐倾向，冉耕的认真拘泥，也一样可以从《世说》“德行”章中找到他们的影子，为《世说》平添了更让人推敲的趣味。是啊，我们站在高处，我们的内心更加精细、复杂，也更加迷茫。但是，我在解释《世说》的时候，也是摆脱尘世杂念的美好时刻，常常处以微笑和宁静之中——我伸手，抓住了两个世界。是为记。  
 
 
-# 言语  
-
-## 2.1  
+# 言语 {#02}    
+## 2.1    
 >边文礼见袁奉高，失次序。奉高曰：“昔尧聘许由，面无怍色。先生何为颠倒衣裳？”文礼答曰：“明府初临，尧德未彰，是以贱民颠倒衣裳耳！”  
 
 - *边文礼*：边让，字文礼，河南陈留郡人，曾任九江太守。边让从小以才华、风采著称，蔡邕曾给大将军何进写信《与何进书荐边让》，认为边让“天授逸才，聪明贤智，……诗、书、易、礼先通，……使让生于先代，在唐、虞则、元凯之比，当仲尼则颜、冉之亚，岂徒世俗之凡偶兼浑，是非讲论而已哉！”天下大乱后避祸兖州，因为言语中多有对兖州大寨主曹操的讽刺，被人告发，“操闻而杀之，并其妻子”。曹操灭政敌满门的描述不绝于书，的确是伟大人物，所谓“唯才是举”不过是一种发家后故作姿态和狂妄的自信。曹操杀了边让之后，引发了兖州士族的巨大反弹，兖州叛乱，曹操弄得半死，侥幸身免。  
@@ -1898,7 +1896,7 @@
 
 “言语”一章我整整一年才完成，有的写得还比较草率，不少网友还依旧关注一个不起眼的帖子，给我勉励，实在让我有点不好意思。嗯，一年时间，“天翻地覆慨而慷”，现实中三大战役已经打完，游戏中我三国也统一了N遍，希望今后我能“宜将剩勇追穷寇”，不辜负网友的情义。  
 
-# 政事  
+# 政事 {#03}  
 ## 3.1  
 >陈仲弓为太丘长，时吏有诈称母病求假，事觉，收之，令吏杀焉。主簿请付狱考众奸，仲弓曰：“欺君不忠，病母不孝；不忠不孝，其罪莫大。考求众奸，岂复过此！”  
 
@@ -2214,7 +2212,7 @@
 
 《政事》中还有几则是赞赏王导善于待人接物，山涛有识人之明，陆玩敢于“翻异”等，我们都可以想见前辈的风范。细读《政事》，我们平心而论，里面故事归类有些有点问题，也许放在语言、识鉴、排调等可能更恰当一些，不过我们在读《论语》等的时候，也没读出子路、冉有有什么政事之长，不必苛责。  
 
-# 文学  
+# 文学 {#04}  
 ## 4.1  
 >郑玄在马融门下，三年不得相见，高足弟子传授而已。尝算浑天不合，诸弟子莫能解。或言玄能者，融召令算，一转便决，众咸骇服。及玄业成辞归，既而融有‘礼乐皆东’之叹。恐玄擅名而心忌焉，玄亦疑有追，乃坐桥下，在水上据屐。融果转式逐之，告左右曰：“玄在土下水上而据木，此必死矣。”遂罢追。玄竟以得免。  
 
