--- a/02-shishuo.Rmd
+++ b/02-shishuo.Rmd
@@ -1,7 +1,6 @@
-# 方正
-
+# 方正 {#05}
 ## 5.1
-> 陈太丘与友期行，期日中，过中不至，太丘舍去，去后乃至。元方时年七岁，门外戏。客问元方：“尊君在不？”答曰：“待君久不至，已去。”友人便怒，曰：“非人哉！与人期行，相委而去！”元方曰：“君与家君期日中。日中不至，则是无信；对子骂父，则是无礼。”友人惭，下车引之。元方入门不顾。
+> 陈太丘与友期行，期日中，过中不至，太丘舍去，去后乃至。元方时年七岁，门外戏。客问元方：“尊君在不？”答曰：“待君久不至，已去。”友人便怒，曰：“非人哉！与人期行，相委而去！”元方曰：“君与家君期日中。日中不至，则是无信；对子骂父，则是无礼。”友人惭，下车引之。元方入门不顾。  
 
 - *陈太丘*：陈寔。
 - *尊君在不*:不，否。
@@ -843,68 +842,8 @@
 “方正”也表现在坚持无神论上。阮修不信鬼神，舆论认为这是正直的表现。当我们考虑到古代的文化背景，作者和舆论都表示肯定，我们就能得出结论，我们中国人在这个方面早就领先于世界。现在有些观点认为，中国人没有信仰导致缺乏敬畏感，导致社会道德堕落。这很荒诞，就像有鬼神一样荒诞。敬畏没有的东西而能使道德上升，这种思维模式的逻辑推理是什么呢？难道古代不是因为是熟人社会和生产力低下的原因而社会治安问题少吗？难道西方发达国家现在无神论者比率较大上升而其道德水准也在较大下降吗？难道 有“主体信仰”而道德水准很高吗？难道当今宗教和极端宗教思想的冲突导致的巨大纷争和给予人民巨大的痛苦是道德的吗？我曾经和西方著名宗教学者交流过，他们对中国和中国政府作出了自己的批评，特别是有关宗教政策。我问：“我可以承认你们说的都有道理，我们有很多事情要做，要改进。但是，我想问一下，你们基督教已经有2000年了，有没有问题？”七位教授集体沉默许久，然后有两位说：“我们认为，基督教分裂了，这是问题。其他我们不认为有问题。”  
 我比七位教授更加方正。
 
-## - {-}
-楼主：linyi518 时间：2014-12-02 17:21:05
 
-是谁在搞中国的颜色革命
-
-颜色革命，大意是说，在某些国家和地区发生了以非暴力活动，使当时政权变更。颜色革命不仅仅发生在所谓的社会主义国家，也发生在政教合一的国家，发生在资本主义国家，发生在“民主”国家等。颜色革命在每个国家的叫法都有一些区别，平滑浓厚的天鹅绒，美丽的玫瑰，高挺的雪松，高贵的郁金香……也包括台湾的太阳花革命，香港的雨伞革命等。在我国大陆地区，党和政府也经常在高声警报——警惕颜色革命，警惕颜色颜色革命，警惕颜色革命…..但在另一面，颜色革命在我国网络上是一个禁忌，玫瑰可能是敏感词，丝绒可能是敏感词，就连“八九不离十”也可能是敏感词，你可能无法上传这些词，可能“根据相关法律法规和政策，部分搜索结果未予显示”，可能一下子开放一下子有不开放，让你摸不着头脑。今天我想说的，在中国，到底是谁在搞颜色革命！  
-是他们在搞颜色革命！他们主政一方，甚至掌管着一个系统甚至整个中国的方向。他们宣称出生于红色的家庭，他们宣称自己是农民的儿子，他们口口声声一会儿要放飞中国，一会儿又要使中华民族屹立于世界之林，他们做报告语重心长，他们做工作雷厉风行，他们是家长，是慈父，是舵手，是中国人民的导师。但他们的家有十几个甚至几十个、上百个，他们的房间里放着几吨的钞票，无数的黄金珠宝，他们甚至是文物收藏家！他们玩弄国家，玩弄权力，玩弄信仰，玩弄女性。他们拥有一切，他们义正词严，职务是他们华美的外袍，理想是他们的遮羞布，然而他们的肉体就是一泡污水。他们的所作所为，就是搞垮法律，搞垮军队，搞垮一个国家的底线，他们是国家的罪人，民族的罪人！  
-是他们在搞颜色革命！他们白手起家，给官员洗内裤，给官员找处女，给官员庆祝生日，婚丧嫁娶，出国出境送上礼金……然后他们拿着这样那样的条子，获取各式各样的资源，矿产、土地、资金，空手套白狼。他们路子粗，他们胆气豪，他们一掷千金，醉生梦死，他们像癌细胞，他们像艾滋病毒，不断地拉人下水，腐蚀一切，整个社会笑贫不笑娼，逼使所有人追逐金钱，物质至上。他们是公平的罪人，是信仰的罪人，是道德的罪人！  
-是他们在搞颜色革命！在大火焚烧剧院的时候，他们厉声高喝：“让领导先走！”在大地震的时候，他们忠心耿耿：“领导，我们没有能力保证降落的安全，你不能去灾区！”在领导开展自我批评的时候，他们一脸不情愿：“不能很好地体会领导的思想，说是执行领导的指示，实际上是走了样。领导总是正确的！”他们对领导比对父母孝顺，对领导比对儿女关心。但是他们骂下属比对骂儿子还狠，但他们对群众比对敌人还狠。下属提一句不同意见，不是一个耳光，就是从此打落冷宫；群众跪在他面前：“不要给我搞这一套！”什么是人？领导是“高级人”，他是“奴才人”，其他的就是蝼蚁！  
-是他们在搞颜色革命！一把大火居然烧了78个粮库，没有责任人，是配电房短路！一把大火烧了上万吨的棉花，没有责任人，“当地群众情绪稳定”！一个案子，刑讯逼供，杀错了人，十几年得不到纠正，天理何在！“你是替党说话还是替群众说话！”“我就是王法，我就是天理！”“领导就得骑马坐轿，老百姓想要公平？臭不要脸!”到底是谁在搞垮社会，“天高皇帝远，民少相公多。一日三遍打，不反待如何！” n
-是他们在搞颜色革命！教育产业化，医疗市场化，学校衙门化。学者成为病态颓废的追逐者，医生成为回扣腐败的主力军，专家教授成为野兽的代名词。教育家雅斯贝尔斯说：“真正的教育是用一棵树去摇动另一棵树，用一朵云去推动另一朵云,用一个灵魂去唤醒另一个灵魂。”知识分子应该不断地使人不安，应该作为世界之痛苦的见证人，应该因独立而引起异议，应该反抗一切隐藏着的和公开的压力和操纵，应该是体制和权力及其妖术的主要怀疑者，应该是他们谎言的见证人。因此，一个知识分子就不能去扮演分配给他的角色，也不能屈从于胜利者所写的历史。一个知识分子不该属于任何地方；他不管在哪里都应该是一个刺激物；他不应该有固定的位置。  
-是他们在搞颜色革命！他们口口声声反腐败，他们口口声声批评社会，他们口口声声是这个社会无辜的受害者，是不公正命运的承担者。但是他们的孩子上学去走后门，他们去看病塞红包，他们连交一张100元的交通罚单，也要去搞关系。他们充满正义感，但是他们不送礼就浑身不自在；他们充满良知，同情弱小，但是他们连基督、连菩萨也要行贿；他们只知谴责，不知道建设；他们毫无坚持，毫无原则，浑浑噩噩，是沉默的大多数，是人云亦云的大多数。他们挤在人堆里，要么被践踏而死，要么默默无闻地平安终生。  
-我40岁了，我从来不是愤青，也不是愤怒的中年，我有我的原则，我会按照自己的理想去建设自己的世界，哪怕只有一个人的世界。而且我相信，我的世界绝不会一个人，总有越来越多的人喊出：“我不服！”并为此而努力。
-
-## - {-}
-道理不需要复杂的言辞。凡讲不清楚的，就停止言说，无需辩论。  
-认识在发展，从前的道理未必是现在的道理；现在的道理未必是未来的道理；但基本的道路已经呈现，相当稳定，像一颗星球，虽然会消亡，但是对于现在的人类来说，很久以后的消亡对于现在来说，没有多少意义。如果人类毁灭，那是没有遵循道理。  
-除了人，其他动物不会关心与自身无关生命的命运和待遇。而人不一样，人的关怀面越来越广，正义的地位逐渐显现，逐渐成为人最根本的追求，成为核心。  
-什么是正义，人类不断思考，我们对正义的认识已经比较清楚。  
-人是宇宙的中心，每个人是自己世界的主人。如果个体死亡，整个宇宙对他来说就没有任何意义。尊重人的生命，尽力去维护人的生命，是自己和其他人、社会的共同责任。  
-但凡恶意剥夺他人生命的，必须承担自己的命运。剥夺他的生命是必然的选择。这种正义，不是来自于法庭，而是民众的正义情怀法庭。  
-一切愤怒的反抗都被允许，是正义。  
-外部世界是物质的，但人有丰富的精神世界。不然人就不是人，而是一条在粪便中心满意足的蛆虫。精神世界不从属于物质世界，不然世界上只有物质利益而无正义。就连一条狗，宁可饿死也在怀念和等待自己的主人，这种情感本身就投影着人类对忠诚这种精神的肯定。正义高于物质利益，正义藐视物质利益。只要有长远眼光的人，就必须捍卫正义，保障正义不能被具体的某个人、某个集团的利益击败，不然人类只配灭亡。  
-讨论人性本善本恶没有意义。意义在于人要追求什么，而不是他原来是什么。人原来就是一个简单的、需要抚养的婴儿，讨论婴儿的人性想证明什么呢？  
-正义并非为满足人自身的正义感的精神需求，而是人长期的社会生活中产生的。正义产生，于是人摆脱了没有思想的低等动物属性，一跃成为灵，有了灵性。尽管这种灵性在变化，但变得越来越正义是一个客观事实。譬如私有制的产生是正义的，多劳者应该多得是正义的。于是盗窃要被砍手。在当时砍手是正义的。但随着社会发展，砍手又不见得正义，而是监禁。监禁也不够正义，于是教化，传授他自力更生的技能。如果他无法自力更生，那么社会给予他基本的生存资料。这就是正义的发展轨道。  
-世界复杂，但正义的变化之道相当清楚。如果不清楚，那就是没有抓住正义的本质。抓不住正义本质的人很多，但一定有越来越多的人会抓住这种本质。  
-大多数人默默无闻，不等于其内在不存在对正义的理解和追求。就像一条睡着的狗，不等于他没有嗷叫的能力。  
-物质生产，不仅仅是为了满足人的物质需要，它还满足人的精神需要。人的精神需要，已经逐渐超过了人的物质需要。譬如说文化产业，第三产业等，物质和精神的界限并不是一清二楚的。人的精神需要有很多，但是正义的精神需要，是其中的核心需要。  
-民主和自由有交汇，但是民主和自由是两个概念，不能混为一谈。民主的本意就是在公共事务中，遵守少数服从多数的决定，重点在于全民；而自由的概念，是在私人领域中，尊重每一个人对自己的支配权，重点在于自。民主当然建立在个人自由的基础之上，但如果民主和自由离开了正义这个核心，它们没有意义。正义才是一切价值的核心。  
-占中问题，有美英势力操控也罢，有独立分子闹事也罢，但其要求是正义的。要求剔除选举委员会，有比较广泛的选举人，这是公民内在的正义精神需求。选举会更加丑恶也罢，选出来的是王八蛋也罢，正义无需考虑后果，它只看重当下，当下就是一切。文革的动机是正义的，但文革的手段不是正义的，手段正义才是真正的正义，正义不考虑动机，不考虑后果，只关注现在做的是不是正义。  
-稳定不稳定与正义无关。白人警察枪杀没有武器的黑人青年，当然可能会引起社会动荡，因为民众会认为杀手无寸铁的黑人，涉嫌种族歧视，涉嫌滥用权力，这种怀疑和抗议是正义的。评审团认为，没有足够的证据表明警察滥用权力，警察目前无罪，这种判决也是正义的，正义没有大小之分。两种正义斗争，无论死多少人，给社会造成多少损失，都没有关系。因为还有一种正义在所有人的心里，法律会再次对每个人的判决，历史会对每个人做出判决。人的生命、财富都最终将从属于正义。所以说，儒家宣扬等级制不是正义的。儒家宣扬的不是正义的有序，而是继承于动物世界，尚算适应农业社会的强权制度。共产党宣扬的集体主义、爱国主义，无非是使“社会永远处于被官员们惯于称之为良好秩序和社会安宁的那种昏昏欲睡和循规蹈矩的状态”，也并非正义。  
-强制改变人的本来生活状态，不正义。社会主义当然追求工作的平等、身份的平等，青年上山下乡看似正义，但由于它的强制性，就违反了手段的正义。以此类推，社会主义实践中，充斥着众多看似正义，实质与正义毫无关系、背道而驰的行为。一部电影意味深长地说，政府为了修高速公路，利用法律把一个人的家里拆了；然后宇宙联邦的飞船来了，宣布宇宙联邦委员会的决定，地球妨碍了银河系超高速通道的建立，决定摧毁地球，于是地球被毁灭了。  
-资本的剥削不正义。投资100万建立工厂，你只能占有20%之内的利润，80%的利润应该归工人和社会所有。如果你的生活不需要20%的利润，就应该通过其他形式返回给社会。维持肉体正常需要的欲望是正义的，无休止的欲望不是正义的。什么是正常需要，肯定有个界限，这个界限因人而异，但其中的原则和界限肯定会在自己的心中。自己觉得无法把握这个原则，不知道自己到底想要什么，想要多少，那么你已经在下滑，在离开正义。  
-手段正义很重要。用高跟鞋砸死野猫不是正义，饿死野猫不是正义，毒死或者令它快速死亡，具有正义性。其他事件可以类推。譬如礼貌或者礼仪，它不是虚伪，而是和赤裸裸的私欲保持距离，与恶保持距离。
-
-1931年，中共中央特科负责人顾顺章被捕后迅速叛变，中共中央遭受重大打击，部分在白区的中央领导人和骨干被捕杀害或叛变，上海、武汉等地秘密机关几乎完全被摧毁，中共遭受了前所未有的重创。但是，放在历史的大背景之下考量，顾顺章这次叛变可以说是挽救了中共。中共本来是共产国际组织的一个支部，从马列理论和斯大林的要求来说，立足于城市、致力于工人运动，才是中共的“正途”。在顾顺章叛变前，要把中共中央迁往山区农村不可想象，没有谁敢主张将党的基础从工人转移到农民身上，当时毛泽东无非就是政治局候补委员，远在天边，他根本没有机会获得中共中央的领导权。但正是因为中共中央搬到了他的眼皮底下，然后经过一系列的党内斗争，加上日本侵略，张学良叛变蒋介石等外部条件，中共终于基本统一中国。这就是世界的奇特之处——顾顺章的叛变投靠居然导致了国民党政府的垮台，导致世界格局的重大变化。  
-历史无法重演，即使再回到1931年，顾顺章这条大鱼国民党无论如何都不会放弃，即使那些朴素的辩证法熠熠生辉，即使前面是硫磺火湖，蒋介石必定还是会义无反顾地跳下去，别无选择。  
-什么是辩证法？黑格尔曾经总结提炼过，对立统一，量变质变和否定之否定。这并不是我们通常理解的辩证法，我们中国人的辩证法，就是《淮南子》中讲诉的塞翁失马，就是《道德经》所说的：“祸兮福之所倚，福兮祸之所伏。”这种论调给了我们一定的勇气——不怕挫折苦难，看开荣辱生死，命运总存在某种转机，在你意想不到的拐角处。即使我全盘皆墨，正如苏格拉底所说的那样：“我去死，你们活着。谁的命运更好，只有神知道。”  
-今天我要阐述的，不是黑格尔的辩证法，而是祸福相依的辩证法。  
-祸福相依的辩证法给人以继续生活的支撑。孩子学习不好，可孩子的情商高啊！孩子智商、情商都不高，可是孩子可能是阿甘啊！孩子都坐牢去了，没关系，浪子回头金不换啊！如此等等的逻辑推理，它能使人宽容，能使人保持对未来的信心。  
-祸福相依的辩证法使人相信邪恶必将失败。“俺曾见，金陵玉树莺声晓，秦淮水榭花开早，谁知道容易冰消!眼看他起朱楼，眼看他宴宾客，眼看他楼塌了”，现在他是何等的得意，但是他的成功建立在偶然之上，建立在阴谋之上，建立在别人的血泪和尸体之上，他就是秋后的蚂蚱，蹦达不了几天了。“可笑严介溪，金银如山积，刀锯信手施。尝将冷眼观螃蟹，看你横行到几时。”即使严嵩能如秦桧一样得以善终，历史的审判还在等着他，无数唾沫落在西湖边的铁像之上。即使像那些小人物，没有历史的审判，但还有宗教的审判。那深埋于地下的梦幻宗教裁判所，有着炼狱、地狱和阎罗殿，有着转世轮回，他还是跑不了。诗人北岛在那里歌唱：“我不相信梦是假的, 我不相信死无报应！”  
-祸福相依的辩证法使人心存善念。个人命运的随机性，使得一些人的成败并无什么道理可言，就是一个运气。这个时候他如果能想起祸福相依的道理，就会得饶人处且饶人，“但存方寸地，留与子孙耕”。很多企业家谈心得体会，往往最终会说：“小生意靠智慧，大生意靠德行”；共产党执政以后，不打死老虎，对日寇和国民党的俘虏基本不杀，如果毛能在反右、文革时能保持那点善念，不搞你死我活，又何至于此啊。不做零和游戏，不玩赢家通吃，那么失败者的辛酸和苦涩就会轻很多，就会减少很多激烈的冲突。  
-但是祸福相依的辩证法是一种朴素的辩证法，它只是一种世界的现象，而非世界的本质与原则。我再拿顾顺章事件来解释。  
-中共的胜利与失败，应该放在当时的世界格局来考量——统一欧洲和统一亚洲的行为必定失败，摆脱殖民地获得独立的运动必定成功，这才是历史的走向。自从马列主义诞生以后，就埋下是世界格局必然发生改变的种子，穷人、社会生活的失败者已经获得了马列主义的武器，即使这把武器伤人伤己，失败者们必定还是要挥动这把利刃，打破那个旧世界。无论是蒋介石还是毛泽东，都使用了这个武器，胜利者还是失败者，无非是谁的功夫深，谁的脑子活，谁的机遇好罢了。  
-往大了说，欧洲之所以这样，中东之所以那样，亚洲之所以这样，美洲之所以那样，首先是由于地域和气候决定的，其次是由文化影响的，第三是由经济组织形式在起作用，第四是因为技术的变化和发展。往小了说，一个人的命运如何如何，首先是由于他的出生，其次是他的教育形态，第三是个人性格和经历，第四是机遇。我们对比国共两党的那些领袖，这四个方面的区别就比较明显。国民党领袖普遍比共产党领袖的出生要高一个到几个层次，他们受教育的程度要高一个到几个层次，他们的经历要更顺畅一些，这就决定了他们的价值取向，共产党领袖是更加彻底的革命者。再举一个小例子，家长因为孩子做错题目，叫孩子重写10遍，这会导致三个后果，一是孩子会越来越强大，二是孩子越来越自卑，三是孩子会越来越麻木，这需要家长来拿捏把握，家长是否真正完全了解自己孩子，是否坚信自己的教育方法是否真正适合孩子。  
-不过世界不是家长，天地无言，天地不仁，它的原则是由你自己去体会，去发现、去理解。很多很多的人被命运所作弄，他们反复思考，不断交流，勤于写作，他们已经得出了一些基本结论，就像经济学得出某些结论——天下没有免费的午餐，人们会对激励做出反应，当政府发行了过多货币时，物价上升……对于祸福相依的辩证法，我们也有一些结论：  
-人人享有言论和信仰自由，在法律面前人人平等，人人享受免于失业的保障……  
-勇敢，善良，学习，思考……  
-我们把握不了个人的命运，但我们知道世界发展的方向。
-
-## - {-}
-星云法师二三事
-
-2014年初， 店掌柜接见星云，过了几个月，浙江省的龙王也接见了星云。我是具体办事人员之一，就和佛光山打了交道。  
-一是座位问题。本来我们打算政府部门坐左侧，佛教界坐右侧，但佛光山提出，一定要浙江的坐一边，台湾的坐另一边。这样浙江的一边就有70、80人，佛光山一边30来个人。那边空缺的部分还是需要浙江的和尚去填，坐在佛光山一行的后面，不伦不类。  
-二是会议程序。佛光山提出，星云要第一个发言，这个没什么关系。可是佛光山又提出，星云一讲完，他就要走。我觉得不可思议，但领导无所谓，我们也就无所谓。结果星云一讲完，台湾的30来个人就呼啦啦走了一片，会场就空出一角。我不知道浙江佛教协会怎么想这件事。  
-三是在会客室里。浙江的政府领导坐一边，佛光山的头目坐另一边。双方还说了没几句话，台湾随团的一个残疾人老太太执意要进入会客室，一进会客室，她从轮椅上滑下来，“扑通”一声跪在星云面前，哭哭啼啼要星云祈福。于是大家看星云表演。  
-四是我私人身份去佛光山，看见孔子、关羽的雕像站在正殿的门口，为佛光山的雕像把门。佛光山专门还开辟了巨大的两三个展览馆，介绍星云伟大的生平经历和精湛的一笔书法。
-
-
-# 雅量
-
+# 雅量 {#06}  
 ## 6.1
 > 豫章太守顾劭，是雍之子。劭在郡卒，雍盛集僚属，自围棋。外启信至，而无儿书。虽神气不变，而心了其故；以爪掐掌，血流沾褥。宾客既散，方叹曰：“已无延陵之高，岂可有丧明之责！”于是豁情散哀，颜色自若。
 
@@ -930,3 +869,331 @@
 嵇康随后获得了崇高的荣誉，他是两晋期间名士的楷模。名士们认为，嵇康走在人生的正道上，是顺应天命的杰出人才，是他们的精神领袖。嵇康喜欢打铁，我们可以想象，在洛阳的竹林边，“都教授”挥动铁锤，击向火红的铁具，铁花四溅，声音响彻原野，世界寂静无声。遗憾的是，嵇康的无惧生死的器局被后世演变为醉生梦死的堕落。吕安曾经给嵇康写过一封信，信中说：“顾影中原，愤气云涌。哀物悼世，激情风厉。……平涤九区，恢维宇宙，斯吾之鄙愿也。”这种气度在两晋名士中寥若晨星。
 
 > last updated 2018-04-03
+
+## 6.2  
+>夏侯太初尝倚柱作书。时大雨，霹雳破所倚柱，衣服焦然，神色无变，书亦如故。宾客左右，皆跌荡不得住。  
+
+- *夏侯玄* 字泰初，夏侯尚之子，夏侯渊的侄孙，司马师的舅子，与何晏等开创魏晋玄学先河，是当时的玄学领袖。这个故事就是他贯彻玄学精神的体现。  
+故事来自于《易》震卦，“震来虩虩，笑言哑哑。震惊百里，不丧匕鬯。”大意是，雷声如猛虎来临般令人恐惧，但我依旧谈笑自若。雷声震惊百里，但我依旧饮食如常（手里拿着酒勺子，连一滴酒都没有洒出来。也许是说我祭祀如常）。  
+故事来自于《庄子》，“之人也，物莫之伤：大浸稽天而不溺，大旱金石流，土山焦而不热”。大意是说，这样的人（仙人）不被外物所伤害，洪水滔天淹不着他，大旱把金石熔化，把土山烧焦，他也不觉得灼热。  
+这种临危不乱、处乱不惊的气度是因为后天修养，只有克服恐惧才能获得人的尊严。恐惧并不来自肉体的感受记忆，而是源于对未知、痛苦和死亡的想象。只有看透事物本质才能气量宽广，只有充分体察恐惧的来源才能无所畏惧。按老子的说法就是“致虚极，守静笃”“及吾无身，吾有何患”，建立宏大的世界观，把自己定位于无，与世界一体，使心灵保持虚和静的至极笃定状态。  
+夏侯玄不怕打雷的故事过于夸张，不怕雷声也许有，但雷打得衣服都焦了，人却没事就不真实；打中夏侯玄没伤着，其书写如故更不靠谱。在裴松之的注中就说，故事有另一个版本，夏侯玄是站在树下，霹雳打中树，夏侯玄“颜色不改”。这还差不多，但不够传奇。世说新语终究是走自媒体八卦流，不耸人听闻没有点击量和转发数。  
+- *面不改色* 发展到后来，在苏洵那里就是“泰山崩于前而色不变，麋鹿兴于左而目不瞬”（《权书•心术》）。它和喜怒不露于形色是两种气量，一是不为生死所扰的强大无惧，一是性格圆融涵养深沉。  
+
+## 6.4  
+>戎七岁，尝与诸小儿游。看道边李树多子折枝。诸儿竞走取之，唯戎不动。人问之，答曰：“ 树在道边而多子，此必苦李。”取之，信然。  
+
+这个故事令人费解，好像放错位置，应该在“夙慧”。难道是说王戎不和小朋友一起去抢李子，显得从容不迫，这算是雅量？  
+我是浙江人，小时候看过一本民间故事《鸳鸯湖》，大意是说西施被献夫差，路过嘉兴桐乡，尝过路边的李子，吃李时留下了指甲印，所以桐乡的携李从此以后有了“西施爪痕”。那时我就想，不是说路边的水果都是苦的吗，西施怎么就能吃到甜李子啊？后来涉略民间故事文本学，对解释性神话颇为着迷。  
+年轻时候看过一篇经济学家的散文，大意是说为什么欧美路边的橘子没人摘，而南美路边的果树没果子，主要是市场供给的原因，和道德素质无关。  
+
+## 6.5  
+>魏明帝于宣武场上断虎爪牙，纵百姓观之。王戎七岁，亦往看。虎承间攀栏而吼，其声震地，观者无不辟易颠仆。戎湛然不动，了无恐色。  
+
+- *魏明帝*：曹叡，曹丕和甄后之子，死于239年正月初一，当时王戎五岁（234年生），故事存在疑问。  
+- *宣武场*：原洛阳城北，练兵操场。《水经注》中说：“大夏门东宣武观，凭城结构，南望天渊池，北瞩宣武场。”  
+- *承间*：乘机。《三国志•武帝纪》裴松之注:“太祖被甲婴胄，亲巡将士，明劝赏罚，众乃复奋，承间讨击，贼稍折退。”  
+- *辟易*：退避。《史记•项羽本纪》：“是时，赤泉侯为骑将，追项王，项王瞋目而叱之，赤泉侯人马俱惊，辟易数里。”  
+
+决不恐惧是魏晋第一流人物的标志，亚里士多德也说过，超越了恐惧的人才能获得真正的自由。杀人放火的亡命之徒不是无惧，苏轼说，“拔剑而起，挺身而斗，此不足为勇也。天下有大勇者，卒然临之而不惊，无故加之而不怒”，他在乌台诗案中也恐惧，一番生死经历后，“平时种种心，次第去莫留”，精神力量回蓝见长，终于写出了“谁怕？一蓑烟雨任平生”，此心正大光明，于是“山头斜照却相迎”。  
+
+## 6.6  
+>王戎为侍中，南郡太守刘肇遗筒中笺布五端，戎虽不受，厚报其书。  
+
+- *刘肇*：《晋书》无传，但有一段文字说：“右长史、杨丘亭侯刘肇，便辟善柔，苟于阿顺”，王戎从征吴前线立功回朝，当了侍中，善柔、尊重领导的原荆州下级官员太守刘肇送东西表示祝贺。  
+《晋书》的作者们觉得，堂堂一个省市级官员给相当于宰相的高官送礼，五端（五匹，每端二丈以上）布怎么拿得出手啊，这根本谈不上行贿，顶多也就是人情往来，就改成了“五十端”。当年戴笠回浙江，一买金华火腿几千只，回重庆送何应钦400只，送蒋介石4只。无非是何应钦是军事总长，重礼以表诚意，蒋介石简朴，意思一下以表敬意和戴某人的清廉。  
+- *筒中笺布*：一种四川产的筒装细麻布，据说整匹布能卷置于一节竹筒之内，在当时比较名贵，“一端数金”。古时候的“金”有时候指黄金、有时候白银，有时候黄铜，不好琢磨。  
+- *厚报其书*：指回信表示深切的感谢。  
+
+世说故事里，有好几段记录王戎吝啬爱财的小故事，但也有他不爱财的记录，譬如“德行”中讲，他父亲王浑“卒于凉州，故吏赙赠数百万，戎辞而不受，由是显名”。这个故事也说他不接受贿赂，但放在“雅量”就有点费解。也许我们要从刘孝标的注中去体会：  
+>“戎报肇书，议者会以为讥。世祖思之，乃发口诏曰：‘以戎之为士，义岂怀私？’议者乃息，戎亦不谢。”  
+
+《晋书》中进一步解释司马炎的话，帝谓朝臣曰：“戎之为行，岂怀私苟得，正当不欲为异耳！”  
+这两段话的大意是说，这桩受贿案虽然王戎没收礼，没罪，但当时的“清议”“月旦”舆情发酵，键盘侠们指责王戎没有像杨震那样“天知地知你找我”般“方正”，他居然还写了深情厚貌的感谢信，其中肯定有猫腻！这时候司马炎发话：像王戎这样品行的人，怎么可能会怀有私心，苟且贪婪呢？他不过是不想做特立独行的事让人难堪罢了。于是舆情平息了，王戎也没发微博解释道歉。  
+
+不收礼，但写信感谢算雅量。也许不道歉算雅量，不像高铁霸座男装模作样。对于大度的人，遇到事情道歉并不难，不道歉有点难。  
+
+## 6.7  
+>裴叔则被收，神气无变，举止自若，求纸笔作书。书成，救者多，乃得免。后位仪同三司。  
+
+- *王 裴* 裴楷，王戎 年岁相仿（裴小三岁），皆官宦之后，当时齐名。钟会说：裴楷清通，王戎简要，都是吏部郎的候选人。  
+裴楷的二儿子裴瓒娶外戚杨骏之女，司马炎因为丈人杨骏没有儿子，能力又差，一帮子大臣看不起他，估计他会老老实实，不至于做霍光和王莽，就选他作为笨蛋儿子司马衷的辅政大臣。谁料到杨骏统摄朝政、总领百官后，正因为别人长期看不起他，决心奋发图强，大干一番事业，“因辄改易公卿，树其心腹”，“多树亲党，皆领禁兵”，于是“公室怨望，天下愤然”。最终没两年祸起萧墙，皇后贾南风勾连宦官和秘书人员等发起宫廷政变，一举诛杀杨骏亲戚、党羽等达数千人，西晋立刻进入混乱破溃的境地。裴楷因为姻亲关系，加上尚书仆射荀恺举报陷害，也被双规。裴楷要来纸笔写自白书兼救援书，来博取同情，而后侍中傅祗“证楷无罪，有诏赦之”。  
+领导干部被收监后写材料，以前有写诗歌咏志的，有写遗言抗争的，有写著作不朽的……现在估计都是在准备法庭上的忏悔书吧，“我是农民的儿子”“清晨，听到树上响起清脆的鸟鸣声，呼吸到窗外涌进来的新鲜空气，我的心跳就会加速，忍不住泪水直流，想起那些不堪回首的往事”……  
+
+## 6.8  
+>王夷甫尝属族人事，经时未行，遇于一处饮燕，因语之曰：“近属尊事，那得不行？”族人大怒，便举樏掷其面。夷甫都无言，盥洗毕，牵王丞相臂，与共载去。在车中照镜，语丞相曰：“汝看我眼光，迺出牛背上。”  
+
+- *王衍* 和 *王导* 是远房兄弟。王衍256年生，王导276年生。一个是西晋的宰辅，一个是东晋的宰相。从故事情节上看，王衍那时候还不是高官，所以被族人侮辱。  
+- *属*：嘱咐，托人办事。  
+- *饮燕*：宴饮。  
+- *那得不行*：怎么还没办啊？  
+- *樏*：食盒。  
+- *迺出牛背上*：“迺”同“乃”，这句话费解，但后来的书籍历来引用如此。譬如黄庭坚有句诗夸朋友说：“往来涧谷中，神光射牛背”，南宋董更论王安石书法说：“萧散简远，如高人胜士，敝衣破履，行乎高车驷马之间，而目光已在乎牛背矣”，起码在宋代人的的眼里，这句话是不难理解的，大意就是说：我不在乎，我的情绪没有受到被打的影响，我的注意力在牛背上。用“目光在牛背”来形容高人胜士的萧散简远。  
+但为什么要看牛背上呢？这是什么梗？王衍坐的是牛车，当时确实以乘马车为耻，以乘牛车为荣，难道王衍的潜台词是我的情绪像牛车一样平稳，或者是说，现在我的注意力在坐车上了，被打的事情我没放心上？又或者是说，打我的人不过是一条蛮牛，我早就超越了他？当然，也不能排除王衍在使用《庄子•逍遥游》里的典故，“今夫斄牛，其大若垂天之云。此能为大矣，而不能执鼠”，我是牛人，和老鼠计较什么！  
+今人李天华说，牛背疑为是奴辈的音讹，这很难解释“眼光”。  
+
+## 6.9  
+>裴遐在周馥所，馥设主人。遐正戏，不时为饮。司马恚，因曳遐坠地。遐还坐，举止如常，颜色不变，复戏如故。王夷甫问遐：“当时何得颜色不异？”答曰：“直是暗当故耳。”   
+
+- *裴遐*：裴绰之子，裴楷之侄，王衍的女婿。  
+- *周馥*：曾任尚书郎、司隶校尉、河南尹、平东将军、镇东将军等，“振缨中朝，素有俊彦之称”。  
+- *设主人*：不通，设酒作主人。  
+- *戏*：下围棋。  
+- *司马恚*：当时的饮酒风俗，因为是分案吃饭，就专门设酒保给你倒酒。因为在周馥军中，所以由司马倒酒，而裴遐不喝，肯定是一种比较失礼的行为。就像石崇请王敦喝酒，不喝就斩行酒的美人，王敦不为所动。我曾经看到媒体报道，王岐山去河南某县，县里的办公室主任拿起一杯酒顶在头顶，跪在地上说，你不喝我就不起来。王岐山不屑一顾。他说，你喜欢跪着就跪着吧，继续和其他吃饭的人谈笑风生。也许自古以来河南劝酒恶俗一贯如此，绵延近两千年。  
+- *暗当故耳*：费解，似乎当时的书籍中都没有出现过“暗当”的用法，后来有人提出是“默默承受”的意思，这缺乏旁证，也没有现在的方言可以引证。也有人说暗当就是斗将，暗和斗繁体字比较接近，意思是说，我和一个武夫计较啥啊。  
+
+## 6.10  
+>刘庆孙在太傅府，于时人士多为所构。唯庾子嵩纵心事外，无迹可间。后以其性俭家富，说太傅令换千万，冀其有吝，于此可乘。太傅于众坐中问庾，庾时颓然已醉，帻坠几上，以头就穿取，徐答云：“下官家故可有两娑千万，随公所取。”于是乃服。后有人向庾道此，庾曰：“可谓以小人之虑，度君子之心。”   
+
+- *刘庆孙*：刘舆或刘玙，“闻鸡起舞”刘琨的哥哥，汉室宗亲，世代官宦，年少成名，两人和石崇、潘岳等人同为“金谷二十四友”之一，当时有吹捧他们两兄弟是洛阳杰出人物的口号，“洛中奕奕，庆孙越石”。西晋五胡乱华时，刘琨能在北方作为敌后的“并州刺史”有一番作为，主要是依靠刘舆向太傅司马越举荐，从而“何意百炼钢，化为绕指柔”的刘琨名垂史册。  
+- *太傅*：司马越。306年，晋惠帝封司马越太傅、录尚书事，11月，晋惠帝去世，晋怀帝司马炽即位，委政事于司马越。刘舆本来是司马虓手下做事，为魏郡太守，司马虓去世后，到了司马越那里。一开始有人对司马越说：“舆犹腻也，近则污人。”（大意是说，刘舆是油腻男，接近他就会被弄脏），所以一开始司马越”“疏淡用之”。不过“是时军国多事，每会议，自潘滔以下，莫知所对。舆既见越，应机辩画，越倾膝酬接，即以为左长史。越既总录，以舆为上佐，宾客满筵，文案盈机，远近书记日有数千，终日不倦，或以夜继之，皆人人欢畅，莫不悦附。”人家有真本事，又有白加黑的苦干精神，立刻脱颖而出，当了司马越的秘书长。司马越执政后，“疑朝臣贰己”，一方面把宫里的武官侍卫罢免掉，换成自己的人，“时殿中武官并封侯，由是出者略尽，皆泣涕而去”，一方面杀了中书监缪播、尚书何绥、散骑常侍王延、散骑侍郎高韬等，这些人的罪名都是谋反和妄议中央之类的，“诬帝舅王延等为乱”，“散骑侍郎高韬有忧国之言，越诬以讪谤时政害之”，其中必定包含刘舆的出谋划策。  
+- *庾子嵩*：庾敳，见4.15，4.75。他称《庄子》“了不异人意”，也就是说自己是和庄子差不多的人物。在“八王之乱”中，“是时天下多故，机变屡起，敳常静默无为”，他当时在司马越手下任军谘祭酒，相当于参谋长，但“常自袖手”，不做事就不犯错误，“无迹可间”，没有什么好用来挑拨离间的。当然，像庾敳这种当官无所作为、贪财无节操的人，也许不是因为忧患避祸，而是一种玄学的本性表现，老庄理论发展到官员的具体生活中，就会大量出现“处官不亲所司，谓之雅远；奉身散其廉操，谓之旷达”的丑陋现象，如同一个理论上追求公正平等的为人民服务的政权会自然演变成集权主义。  
+- *换*：借贷。庾敳是当时的富翁，多次被人抨击聚敛钱财。  
+- *帻*：头巾，汉代成年男性正规场合头上带冠，职位卑下的执事者带巾，到了晋代，正规场合带巾成为常态，并且巾子的形制在王公贵族和平民百姓之间并没有明显区别。这段“帻坠几上，以头就穿取”是闲笔，但真是这种闲笔细节，体现出《世说新语》作者很高的写作修养。作品依靠细节而还原真实，绘出动态图，使笔下的人物活起来，引发读者想象空间和共鸣情感。细节使作品表现得精致和熠熠生辉，使作者具有鲜明个性风格，细节决定小说的价值。  
+- *徐答云*：庾敳在酒醉中依旧深思熟虑。  
+- *娑*：今人刘盼遂认为，北方人“多读三如沙”，“娑”也是当时的方言。在唐代成书的《晋书》直接把娑删了，说明那时候也搞不清楚娑是什么意思了。  
+
+刘舆和庾敳的矛盾，不一定是个人恩怨，而可能是务虚派和实干派的分歧，务虚是君子，实干是小人。  
+
+## 6．11  
+>王夷甫与裴景声志好不同。景声恶欲取之，卒不能回。乃故诣王，肆言极骂，要王答己，欲以分谤。王不为动色，徐曰：“白眼儿遂作。”  
+
+魏晋玄学起先是夏侯玄、何晏、王弼等形成的正始名士和竹林七贤，正始十年（249年），司马懿发动高平陵事变，“同日斩戮，名士减半”，接着10来年司马师、司马炎等又诛杀吕安、嵇康等人，正始之音绝焉。到了元康年间(公元291—299年)，魏晋玄学的第二次浪潮起动，当年残余的正始、竹林名士和他们的后辈此时已成为朝中重臣。张华、裴頠、裴楷、王戎四人“并管机要”，在他们的推动下，玄学思潮风靡西晋士族社会，“朝野翕然，谓之‘一世龙门’矣。累居显职，后进之士，莫不景慕放效。选举登朝，皆以为称首，矜高浮诞，遂成风俗焉”，年轻一代玄学士人走上了历史舞台，史称元康玄学。其中包含王衍、乐广为首的“贵无”派，裴頠、欧阳建以及“金谷二十四友”形成的“崇有”派。彼此意见分歧主要一是世界统一本质是有还是无，二是对生活实践是“任自然”还是“重名教”等。  
+王衍的“贵无”派，既然贵无，就无著述，所以他们的思想现在保存的资料很少，但大意总是“无”是世间万物的共性，而且我们可以从“崇有”著作中获取“贵无”的信息。譬如裴頠批评王衍他们 “薄综世之务，贱功烈之用，高浮游之业，埤经实之贤”，批评他们“心非事也，而制事必由于心，然不可以制事以非事，谓心为无也。匠非器也，而制器必须于匠，然不可以制器以非器，谓匠非有也”。大意是说贵无派崇尚不干政务经济实事，认为心思的本质是无之类的。而裴頠、裴邈认为，有是客观存在，本体就是有的存在方式，无是有发展到消失的一种状态。世界本源“道”就是世界自身，道是万物的统一体，离开自生也就没有本体。有的存在，必须依靠自身的行为去获取外资，而不是靠无为，不垂钓就不能钓到鱼，靠静拱，也抓不到天上的禽鸟。真正的贤人君子应该“惟夫用天之道，分地之利，躬其力任，劳而后飨。居以仁顺，守以恭俭，率以忠信，行以敬让，志无盈求，事无过用，乃可济乎！故大建厥极，绥理群生，训物垂范，于是乎在，斯则圣人为政之由也”  
+裴邈裴景声是裴頠的远房堂弟，“从兄頠器赏之。每与清言，终日达曙”。6.10说刘舆和庾敳的矛盾，也许类似本则裴邈和王衍在玄学理念分歧而造成冲突，“志好不同”。  
+- *恶欲取之*：费解。大多数人理解成王衍要裴邈任命做官（取之），裴邈不肯，但没办法拒绝朝廷。所以他决定上门挑事，最好两人对骂互相伤害，然后都遭人弹劾。谁想到王衍早就在女婿裴遐那里学了“颜色不变”一招，不为动色。  
+- *白眼儿遂作*：有点费解，大意是说，你这个白眼儿（一向自视甚高的人）这下子发作了吧。  
+
+## 6.12  
+>王夷甫长裴成公四岁，不与相知。时共集一处，皆当时名士。谓王曰：“裴令令望何足计！”王便卿裴。裴曰：“自可全君雅志。”   
+
+这是王衍、裴頠人生中的第一次相遇。  
+- *裴頠* 见2.23等，他是司空裴秀的儿子，司徒王戎的女婿，皇后贾南风母亲郭槐的侄儿，儿子裴该是晋惠帝司马衷的女婿。裴頠34岁被司马伦所杀，谥号“成”。  
+王衍是王戎的堂兄弟，看似比裴頠高一辈，但王衍妻子是郭槐的堂侄女，女儿是晋惠帝的儿媳（太子妃），这又是平辈了。  
+王衍和裴頠在玄学思想上有分歧，前已介绍。从从政经历看，裴頠在政治上非常努力，尽忠职守，当时人认为他虽贵为皇亲，但是凭能力居高位的，生怕他离开中央（尚书左仆射，侍中），“雅望素隆，四海不谓之以亲戚进也，惟恐其不居位”。而王衍做官就没干过什么事情，主要是引领文化领域的时代潮流。我们从中可以得出一个结论，一般来说，哪怕你当官不做事，只要在文化领域有成绩，足以名垂青史。即使你当官做事很努力，但在人的精神层面没有什么建树，也迅速被人遗忘。从这个意思上讲，功业都是过眼烟云，而文艺足以不朽。譬如现在几乎没有人记得裴頠，而清谈误国的王衍没有被忘记。  
+- *谓王曰*：此句费解，裴令是指裴楷，和裴頠没有直接关系。难道裴令是裴公的笔误？但结合前后文，这句话引发歧义，可删去。  
+
+高姿雅量的王衍以“卿”称呼裴頠，他居然主动挑事，在称呼上藐视裴頠，可见“主义”之争是原则性问题。而裴頠以奉承的反话予以回击：“我当然可以成全您的高雅情趣。”潜台词就是王衍你没有雅量——在口角之辨中，夸你对手的缺点，就是对对手宽厚的讽刺。  
+而后两人多次在清谈中交锋，“王衍之徒攻难交至，并莫能屈”。辩论次数多了，不打不相知，王衍也开始夸裴頠。我们自然记得4.11和4.12的故事，“中朝时有怀道之流，有诣王夷甫咨疑者，值王昨已语多，小极，不复相酬答，乃谓客曰‘身今少恶，裴逸民亦近在此，君可往问’”，“裴成公作《崇有论》，时人攻难之，莫能折。唯王夷甫来，如小屈。时人即以王理难裴，理还复申”。  
+
+宋代苏轼有句诗说：“说有陋裴頠，谈无笑王衍”，他是写给僧人的。魏晋南北朝以后，佛教成为中国最流行的文化思想，华夏民族被西方佛教文化所渗透和改造，玄学被指责为“陋”，被知识分子所“笑”，抛弃。佛教成为主流意识形态的局面，直到民国时候才被另外的西方文化思想所渗透和改造。然后世界和中国进入高速发展时期，我国的西方马克思主义又被西方自由主义冲击，近5年以来，复兴中华优秀传统文化的口号反复被提及，但我不知道什么才是优秀传统文化，就像玄学被佛学所替代一样，这个潮流不可逆转。  
+
+## 6.13  
+>有往来者云：庾公有东下意。或谓王公：“可潜稍严，以备不虞。”王公曰：“我与元规虽俱王臣，本怀布衣之好。若其欲来，吾角巾径还乌衣，何所稍严。”  
+
+*庾亮*和*王导* 是东晋元帝、明帝和成帝三朝政坛的两大巨头，前已多次介绍。这个故事发生在苏峻之乱后，庾亮觉得因为是自己执政错误引发叛乱而引咎辞职，朝廷下诏安慰，庾亮就请求在外镇效命，出任为持节、都督豫州、扬州之江西宣城诸军事，陶侃死后。又代其为征西将军，兼领江、荆、豫三州刺史，都督七州诸军事。这样王导在中央，庾亮在地方。  
+两人的执政思想有重大分歧，就譬如王导主张保守疗法，最终无非是安乐死，庾亮一定要动手术，老是做出在肉体上铲除政见不同者的举动，两人时有矛盾，明争暗斗。庾亮手握重兵，完全占了上风。王导虽然在中央，但总是觉得朝廷中还是庾亮在遥控指挥，内心愤愤不平。每当刮起西风的时候，王导就用扇子挡住灰尘，说：这是庾亮吹起的灰尘吧，身上都被弄脏了。在这种局面下，两人时有猜忌，边上打小报告的人也不断。譬如这次，有从湖北来的官员说，庾亮有到南京来的意思（杀回中央）。建议王导暗中早做准备。晋书中说，是陶侃的儿子陶称举报的：“南蛮校尉陶称间说南蛮校尉陶称间说亮当举兵内向，劝导密为之防。”  
+- *稍严*：逐渐加强戒备。  
+- *布衣之好*：当老百姓时建立的交情。王导大庾亮13岁，两人都是年轻时候就显贵了，说他们是布衣之交并非事实。王导无非就是引用典故来表明，我们心怀平民百姓之间那样的交情。言下之意可以理解成，达官显贵之间是没有真正友情，只有人情。现在的社会，成功的标志已经简化成有钱有权了，但是对于人的情感需要来说，深挚的友谊是人生最大的一种安慰。甚至有人说，飞黄腾达的路上一定点缀着破碎的友谊。即使是权贵，他们也向往并拥有宝贵的友谊，但你获得了什么，就会失去另外一些东西，这是没有办法的事情。  
+- *角巾径还乌衣*：这里的角巾专指居家闲居戴的头巾，与布衣相应，辞官归故里的意思。  
+《晋书》中说，庾亮和王导彼此暗中猜忌，孙盛就劝庾亮：王导常有世外之情、归隐之志，怎么会屈身做那些凡夫俗子的事情，必定有小人在挑拨离间。后来一查，是陶侃的儿子陶称在作祟，庾亮杀陶称。  
+从实际效果看，庾亮不断做事，不断制造麻烦，今人田余庆评价说，庾亮起自外戚，无功晋室，而又措置乖谬，与王、谢家族的历史很不一样。庾氏家族不能比齐王、谢，是可以理解的。  
+
+## 6.14  
+>王丞相主簿欲检校帐下。公语主簿：“欲与主簿周旋，无为知人几案闲事。”   
+
+不到30个字，主簿一词出现三次，表述累赘。“欲与主簿周旋”多余且费解。  
+王导的办公室主任根据年度工作安排，要检查一段时间以来，办公室成员文件起草、批复等工作落实情况，做一次述职报告和查验。王导就语重心长地对主任说：犯不着和下属较真，去管人家的案头文书工作。  
+东晋对于江南来说是个外来政权，建立在南方士族鼎力相扶的基础之上，但是南北矛盾和地域歧视不可能就此消除，譬如当时的歌谣就说：永嘉世，天下灾，但江南，皆康平；永嘉世，九州空，余吴土，盛且丰；永嘉世，九州荒，余广州，平且康。在南方人眼里，西晋流亡人士就是失败者。  
+大量北方官员和流民涌入，各势力就在长江中下游展开了尖锐的斗争，东晋内部发生了很多次叛乱。王导认为，如果行政苛刻，一切按旧王朝的规矩办事，就会激发连续不断和大规模的反抗，从而动摇政权。执政者只有放弃原则，松弛律令，力图维持大族的力量均势，调和矛盾而不使之爆发，用满足大族的利益要求，来求得统治局面的稳定。譬如为了解决侨民问题，王导搞了“侨寄法”，就是政府搞两套班子，在各级行政单位内部，加设侨州、侨郡、侨县。侨州、郡、县有大量流亡官员，这是流亡士族的出路，虽然它肯定导致行政系统紊乱，加深人民苦难，但对东晋政权说来，却是安置流亡士族、缓和南北士族矛盾的重要措施，同时也保证了流民尽量少危害地方，避免当地人口和外来人口之间的强烈冲突。这些局面，我们只要看看现在欧洲一些国家因为接收难民，而造成极右势力获取大量选票的情况就了其大概了。  
+王导不但反对主簿搞工作检查，对晋元帝司马睿318年搞整顿吏治的反腐运动也进行了否定。当时他召集各部巡视组会议，对顾和总结的“宁使纲漏吞舟，不以察察为政”大加赞赏。王导含含糊糊的、丧失原则的工作方法，“举贤不出世族，用法不及权贵”，“谓多养无赖足以维持天下”，当时还有歌谣说：“廷尉狱，平如底；有钱生，无钱死!”这让有责任感的人感到愤怒，陶侃、庾亮想有大作为的人就多次试图让王导下课， “王导务存大纲，不拘细目，委任赵胤、贾宁等诸将，并不奉法，大臣患之”，打造一个理想的政权。不过所有人都相继去世，334年，陶侃去世，339年，王导、郗鉴去世，340年，庾亮去世，这是当时政坛最重要的四个人物。  
+- *周旋*：一般的意思是举止进退，在这里不好理解。  
+- *无为*：无须、不必。“无为在歧路，儿女共沾巾。”  
+
+## 6.15  
+>祖士少好财，阮遥集好屐，并恒自经营，同是一累，而未判其得失。人有诣祖，见料视财物，客至，屏当未尽，余两小簏著背后，倾身障之，意未能平。或有诣阮，见自吹火蜡屐，因叹曰：“未知一生当著几量屐？”神色闲畅。于是胜负始分。  
+
+- *祖约* 字士少，曾任侍中，民族英雄祖逖的弟弟。一直以来，东晋朝廷对北伐的祖逖没有什么支持，就听凭祖逖在前线和敌后与石勒作战。321年祖逖去世，朝廷也只能派祖约去接班，任平西将军、豫州刺史。  
+- *阮孚* 字遥集，曾任侍中、吏部尚书、广州刺史。竹林七贤阮咸之子，见4.76“林无静树，川无停流”。  
+- *经营*：料理。两个高官，一个要数钱数到手抽筋，一个要自己从事贱业做手工，都是为外物所累。  
+- *未判其得失*：一个是贪财，一个无非是有个工艺品爱好，怎么会没有高低呢？这可能是因为玄学理论发展导致的逻辑。当时人认为，不为外物所累是圣人的理想人格，这个很难有人能做到。东汉以来的社会风气太虚伪了，“情伪万方”，我东晋人退而求其次，做人要讲真，讲自然，只要我们的言行是内心真实需求的反映，那么传统意义上的肮脏也不是肮脏，真就是美。就像现在有些网友开玩笑，真爱就是“死刑不亏，三年血赚”。虽然从当代伦理视角上看，贪财是贪婪的欲望，好屐是精神层面的爱好，是两个性质完全不同的事物，但在当时的玄学思想看来，要尊重个性的丰富性、追求的多元性和体验的自主性，两个都是可以表达丰富个性、创造力和生命力的东西，本质上是一回事。  
+- *料视*：即屏当，即收拾，见1.29“恒与曹夫人并当箱箧”。  
+- *余两小簏著背后，倾身障之，意未能平*：把剩下没有整理好的两小箩（）金银财宝放在身后挡住，神色很不自然。  
+- *吹火蜡屐*：明代谢肇淛的《五杂俎》中说：汉时着屐尚少，至东京末年始盛。应劭《风俗通》载：“延嘉中，京师好着木履。妇人始嫁，作漆画屐，五色采为系。后党事起，以为不祥。至晋而始通用。阮孚至自蜡之，谢灵运登山陟岭，未尝须曳离也。”说明在晋代，木鞋子其实是很讲究的，有审美意义。  
+- *未知一生当著几量屐*：“量”就是两只，量词。颜师古《匡谬正俗》：或问曰：“今人呼履舄屐之属一具为一量，于义何邪？”答曰：“字当作‘两’，《诗》云：‘葛屦五两’者，相偶之名，履之属二乃成具，故谓之两，两音转变，故为量耳。’”  
+当代社会的风气，一般是把有钱当做成功的标志，消费主义把物质财富的享用和高消费当做人生的目的，买、买、买似乎极大地体现了人的自由，但是对金钱的崇拜恰恰扼杀了本应十分丰富的个性。阮孚的高明之处，在于他能够把爱好当做品味人生的一种途径，以此发出人生不永的感慨，其实质是超越了物欲的牵绊，而是通过它迈向了精神高地，达到了庄子在《秋水》中所说的“乘物以游心”的境地，活出了“了无尘埃”的智慧，“于是胜负始分”。  
+
+## 6.16  
+>许侍中、顾司空俱作丞相从事，尔时已被遇，游宴集聚，略无不同。尝夜至丞相许戏，二人欢极。丞相便命使入己帐眠。顾至晓回转，不得快熟；许上床便咍台大鼾。丞相顾诸客曰：“此中亦难得眠处。”  
+
+- *许璪* 字思文，后任侍中、吏部侍郎。顾和字君孝，官至尚书令，死后追赠司空。《晋书•顾和传》中说，317年，王导任扬州刺史，顾和当时是王导的属官，见2.33等。顾和是东吴丞相顾雍的后裔，江南官宦大家族，许璪的祖父和父亲仅仅当过县令，虽然许璪在这次的表现中明显比顾和要胸怀高远，但从家庭背景考虑，顾和的成长空间更大一些。   
+- *遇*：知遇。两个人都被王导所赏识。两个人都是江苏人，一个是高门子弟，一个是下层官僚子弟，王导有意识地任用、知遇、提拔他们，带他们出席各种场合表示姿态，以此作为缓和南北人士之间矛盾的一种举措和证明。
+- *丞相许戏*：在王导的府邸里清谈。许：处所。戏：往往是清谈的意思。  
+- *极*：疲劳。  
+- *至晓回转*：顾和心思重，可能觉得不符合礼仪，到了天亮还辗转反侧。熟：熟睡的缩略语，快熟应作“熟寐”。  
+- *咍台*：打呼噜的声音。唐代陆德明《经典释文》中说：‘诶诒，司马云解倦貌，李颐云失魂魄也。诒音台。’诶诒同从□声，咍台即诶诒也。之部，叠韵连语。”  
+- *此中亦难得眠处*：费解。难得即难能。大意也许是王导在夸许璪心无挂碍：在我这里能熟睡不容易啊。  
+
+一帮子人晚上在领导家聊天谈哲学，然后两个小年轻因为时间晚了就直接睡在领导家，领导继续和其他客人聊天到天亮，这是当时上流社会的风气，在现在是不可想象的。  
+
+## 6.17  
+>庾太尉风仪伟长，不轻举止，时人皆以为假。亮有大儿数岁，雅重之质，便自如此，人知是天性。温太真尝隐幔怛之，此儿神色恬然，乃徐跪曰：“君侯何以为此？”论者谓不减亮。苏峻时遇害。或云：“见阿恭，知元规非假。”  
+
+- *庾亮* 风格峻整，动由礼节，闺门之内，不肃而成……时人皆惮其方俨，莫敢造之”，就是说他性格方正，一举一动都比较稳重严肃。  
+- *假*：造作？这个不好理解，文中两个“假”都应该是“佳”。当时人认为，性格深沉严肃是优点，即使矫情而故作深沉，也可以算是优点。  
+- 庾亮的大儿子叫*庾彬*，小名阿恭，在苏峻之乱中被杀。  
+317年，刘琨派外甥、左长史温峤到南京拥戴司马睿，王导安排温峤做太子司马绍的侍从官（中庶子），这时候和中书郎、东宫侍讲、司马绍的小舅子庾亮成为好朋友。温峤性格放诞随便，据说当时晚上经常去秦淮河上的船坊上赌钱，常常付不起赌资以致被庄家扣住，温峤就大喊大叫，叫人向庾亮借钱赎自己，庾亮也都非常爽快。  
+- *隐幔怛之*：躲在帷幕里突然跳出来吓小朋友。朱熹《答林择之》：人欲横流，天理几灭。今而思之，怛然震悚。  
+- *君侯*：汉时对列侯的尊称，后泛指尊贵者。  
+- *知元规非假*：看到了庾彬，才知道父亲庾亮不够好，青出于蓝而胜于蓝的意思。  
+
+## 6.18  
+>褚公于章安令迁太尉记室参军，名字已显而位微，人未多识。公东出，乘估客船，送故吏数人，投钱唐亭住。尔时吴兴沈充为县令，当送客过浙江，客出，亭吏驱公移牛屋下。潮水至，沈令起彷徨，问牛屋下是何物，吏云：“昨有一伧父来寄亭中，有尊贵客，权移之。”令有酒色，因遥问：“伧父欲食饼不？姓何等？可共语。”褚因举手答曰：“河南褚季野。”远近久承公名，令于是大遽。不敢移公，便于牛屋下修刺诣公，更宰杀为馔具。于公前鞭挞亭吏，欲以谢惭。公与之酌宴，言色无异，状如不觉。令送公至界。  
+
+- *诸公*：褚裒字季野，河南阳翟人，见1.34。328年苏峻之乱时，被车骑将军郗鉴聘为参军。“裒少有简贵之风，与京兆杜乂俱有盛名，冠于中兴。”  
+- *章安*：今浙江省台州市椒江区。  
+- *人未多识*：按照正常语序应该是人多未识，大多数人人还不认识他（仅仅听说过名字）。  
+- *东出*：不好理解，椒江在南京、杭州的东南面，如果去南京，路线有点问题，照道理是沿着钱塘江北上，不过古时候的具体旅行路线我不清楚。甚至这篇文章本来就有问题，可能第一句话和后文没有任何关系，只不过是交待时间段而已，大体意思是褚裒当时的职务是参军。有一次要告别故吏数人，而不一定是故吏送他去上任。在南宋《咸淳临志》卷之八十九，直接把“东出”给去掉了  
+- *估客船*：商客船。费解，估船不难理解，就是商船，陆游《晓出城东》：“渺渺长江下估船，亭亭孤塔隐苍烟”，所以在《咸淳临志》的表述是“公乘估船，送故吏数人，投钱塘亭”。文章加个“客”干啥，累赘。也许正因为是坐商船，亭吏就不知道褚裒的官员身份。   
+- *送故*：当时官员离任送别的腐败风气。东汉以来，官场“送故”活动逐渐发展，到了东晋，朝廷还出台了“送故之格”，针对送故做出一些限定，“送故”由汉代的潜规则发展为被摆上桌面公开谈论的明规矩，成了官员离任待遇和常规收入。一是由官府出面或是由故吏自发组织，将大额金钱、物资转送给离任长官，甚至以大量人力为离任长官送行。二是长官在任上亡故或是离职后亡故，原官府或故吏赙赠大额金钱。《晋书》中说，东晋范宁将出为豫章太守时，向晋孝武帝上陈时政云：“又方镇去官，皆割精兵器仗以为送故，米布之属不可称计。”就是说官员离任后，就连兵马都可以带走。还有士兵（兵户）也可以送，“送兵多者至有千余家，少者数十户。既力人私门，复资官廪布。”范宁继而提出，送故不要太过分了，时间不能再长了，因以三年为期，“送故之格，宜为限制，以三年为断”。“送故”到东晋发展为高潮，主要是举荐、门阀制度的配套产物，上下级官员彼此间的依附度加深，官场日益腐败。虽然“送故”到了后来逐渐消亡，但专制特权社会的这种腐败“礼节”和上下级官员、官商之间的人身依附不可能得到根本性的改变，类似如当下披露的某些官员及其亲属的婚丧嫁娶和节日问候礼金、礼物数目可以达到惊人的地步。  
+- *钱唐亭*：杭州古称钱塘县，据南朝宋刘道真《钱唐记》中说：“防海大塘在县东一里许，郡议曹华信家议立此塘，以防海水。始开募，有能致一斜土者，即与钱一千。旬月之间，来者云集，塘未成而不复取。于是载土石者皆弃而去，塘以之成，故改名钱塘焉。”不过这无非是地名的解释性传说，没有可信度，仅仅反映民众对智慧型欺诈故事的偏爱。亭不是亭子，它在汉代是一级政府组织，类似于乡镇，“秦汉之制，十里一亭，亭有高楼，所以候望”，爵位有乡侯、亭侯、县侯等；也有时候是管治安和交通的的政府单位，《汉书》记载：“亭有两卒，一为亭父，掌开闭扫除；一为求盗，掌逐捕盗贼”。在魏晋时期，亭往往就是指国家开设的旅馆，相当于国营的对官民都开放的驿站，《太平御览》引《风俗通义》中说：“亭，留也。今语有亭留、亭待，盖行旅宿食之所馆也。”今人严耕望综合了亭的功能，他在《中国地方行政制度史》中认为：亭基皆高出地面，且树华表以识衢路；亭门有塾，检弹人民；亭内有正堂，以供重要官吏居止；又有高楼，以供候望盗贼；此其形制之大略也。  
+这句话表述还是费解，其实正常表述应该是“公与送故吏数人，乘估船，投钱唐亭往”，但是问题在于既然一帮子人住在官府设置的交通客栈，难道客栈不用身份登记，工作人员看不出人群中站在C位的褚裒的官员气派？  
+- *浙江*：钱塘江。钱塘江曲折，所以叫之江，浙江。  
+- *客出*：费解，应该是客至啊，要么出有到达的意思，类似于出席、出勤。汉语中一个词有正反两个意思也不鲜见，我看过《管锥篇》，开头就讲了这个现象，大概是说“易”，既有变的意思，也有不变的意思。在古文中，譬如受，既有接受，也有给予，择，既有选择，还有抛弃。当然在现代汉语中是这种现象消失了。这样说来，前面的“东出”也许就是东至的意思，“公乘估船东至”，褚裒乘商船打东边来。不过 “出”作为“至”来理解的用法罕见，也没必要。  
+- *何物*：有其他版本说是“何物人”，何等人。  
+- *伧父*：当时南方人蔑称北方人，粗俗之人。北方人称南方人南蛮、南貉。这种以地域歧视寻找优越感的做法比比皆是，在先秦故事中，就没有南方北方的歧视，而是群嘲宋国——那里笨蛋居多，原因无非是宋国是殷商亡国后的封地。  
+- *遽*：惶恐。  
+- *移公*：让褚裒移驾。  
+- *修刺*：置备名帖，通报姓名。  
+
+《世说新语》里有不少偶遇的故事，在小说中，偶遇也是一个常见桥段，在旅馆相遇更是展开情节很好的手段。陌生人能够较长时间待在一起，作者就可以安排各种冲突，我们更多的是在玄幻武侠小说中看到受侮辱的人拔剑一怒，血溅十步，但那些仅仅是传奇故事。也有人说，故事里的沈充是条变色龙，前倨后恭。但这样理解未必妥当，县令听潮水而起，随性请亭吏认为的卑贱之人一起吃饼。得知实情后赔礼道歉，教训了手下的亭吏，这也是大多数人很难做到的。  
+
+
+## 6.19  
+>郗太傅在京口，遣门生与王丞相书，求女婿。丞相语郗信：“君往东厢，任意选之。”门生归白郗曰：“王家诸郎亦皆可嘉，闻来觅婿，咸自矜持，唯有一郎在东床上坦腹卧，如不闻。”郗公云：“正此好！”访之，乃是逸少，因嫁女与焉。  
+
+- *王导*的祖父*王览*是*王羲之*的曾祖父，*王览*是冬天砸冰给继母抓鱼吃的*王祥*的弟弟。  
+- *郗太傅*：郗鉴，见1.24。他当过太尉，不是太傅。这个故事应该在323年前后，郗鉴要么当时以尚书令的身份统领各军御王敦之乱，要么王敦之乱后任车骑将军、都督徐兖青三州军事、兖州刺史、假节，出镇广陵（今扬州）。在王敦之乱这个节骨眼上，郗鉴和王家联姻肯定是一种政治手段。  
+- *逸少*：王羲之字逸少。王羲之的生卒年有争议，这次联姻也是说明王羲之到底是什么时候出生的证据之一。王羲之曾经写过“羲之不天，夙遭闵凶，不蒙过庭之训”，也就是说王羲之在蒙学前父亲就去世了。王旷310年死于与刘聪的上党之战中。蒙学一般是4—6岁，所以我认为王羲之生于306或307年。  
+坦腹东床很难算雅量，而是自然。《世说新语》中没有自然这一归类，但其中的很多故事都应该归之于自然，而不是德行、方正之类的。自然是当时最受追捧的审美趣味，后来也逐渐形成我们整个民族最高的审美趣味，它的来源无疑是《道德经》中说的“人法地，地法天，天法道，道法自然”和《庄子》中所说的“性之动，谓之为；为之伪，谓之失”“同乎无欲，是谓素朴，素朴而民性得矣”“朴素而天下莫能与之争美”。晋代郭象在《庄子》的注中也说：“天地以万物为体，而万物必以自然为正。自然者，不为而自然者也”。今人宗白华写了《论<世说新语>和晋人的美》，说晋人向外发现了自然，向内发现了自己的深情。他在文中反反复复强调晋人对自然的推崇。宗白华的话并没有讲透，晋人对内最高要求也是能够自然，而不是深情。  
+关于当时人对自然的崇尚无需展开，只要讲一个小故事就能了其大概。南北朝时，汤惠休评价当时的诗人谢灵运和颜延之：“谢诗如芙蓉出水，颜诗如错采镂金”。“芙蓉出水”和“错彩镂金”，就是高雅和庸俗、自然真实与矫揉造作的对立体，有着高洁与污浊的区别，于是颜延之“终身病之”——这不仅仅是对他们俩作品的评价，而是人格的评价。颜延之扛不住，“每薄汤惠休诗”，搞互相伤害。  
+
+## 6.20  
+>过江初拜官，舆饰供馔。羊曼拜丹阳尹，客来蚤者，并得佳设。日晏渐罄，不复及精，随客早晚，不同贵贱。羊固拜临海，竟日皆美供。虽晚至，亦获盛馔。时论以固之丰华，不如曼之真率。  
+
+- *舆饰供馔*：一般认为，舆就是与，皆，或者是多的意思。饰就是整治。“都供应酒宴招待恭喜的客人”。新官上任就要大摆宴席，这又是东晋制度腐败的例子。晋代触目惊心的全方位腐败是它迅速动乱，较快灭亡的根本原因。  
+从晋武帝司马炎开始，这个朝代就打上了全面腐败的印记，制度保腐，上行下效，越演越烈。问题是，根据常识，制度腐败必定导致社会动荡，各阶层离心离德。那两晋为什么就不控制腐败呢？特别是万象更新的创业之始，怎么就放任自流呢？当时的人提不出“适当的腐败是社会经济发展润滑剂”（亨廷顿《变化社会中的政治秩序》）之类的理论，它也不是九品中正制和门阀制度的产物，而主要是文化的产物，是享乐主义占据主流意识形态的产物。享乐主义来自于长期的战乱，来自于道家学说和与之密切关系的玄学理论发展到一定阶段后的必然结果，文化导致了整体貌似“合理”的腐败。  
+我们可以注意到，在东汉的乐府就开始歌唱及时行乐：“出西门，步念之。今日不作乐，当待何时？夫为乐，为乐当及时。何能坐愁怫郁，当复待来兹？饮醇酒，炙肥牛，请呼心所欢，可用解愁忧。人生不满百，常怀千岁忧。昼短而夜长，何不秉烛游……”到了晋代，这种及时行乐的歌声已经响彻朝野，譬如陆机把西门换成东门：“出西门，望天庭。阳谷既虚崦嵫盈，感朝露，悲人生，逝者若斯安得停。桑枢戒，蟋蟀鸣，我今不乐岁聿征。迨未暮，及时平，置酒高堂宴友生。激朗笛，弹哀筝，取乐今日尽欢情。” 官员一上任就大摆宴席，官员一离任就获钱百万，很多官僚视特权为自然，视民众如牛马，把官职当做享乐的平台，把嗑药的幻觉当做快乐的源泉，把毫无节制的欲望当做真实的人性，完全丧失了基本的道德观——如果人生是以快乐为目的成为共识，那么人类就是自取灭亡。  
+- *羊曼*：山东人，堂祖父是羊祜，他和温峤、庾亮等都为所谓的“中兴名士”，“兖州八伯”之一，在苏峻之乱时不愿逃生被杀。  
+- *竟日*：整天，终日。  
+韩非子注解《老子》的“居其厚而不处其薄”“居其实不处其华”，指出它的意思就是“行情实而去礼貌也”，要去掉礼貌，赞美真情实感。周到精细就是太有心思，苦心伤神；来早的吃好的，来晚的吃差的，真率自然即雅量。  
+
+## 6.21  
+>周仲智饮酒醉，瞋目还面谓伯仁曰：“君才不如弟，而横得重名！”须臾，举蜡烛火掷伯仁。伯仁笑曰：“阿奴火攻，固出下策耳！”  
+
+- 周顗周伯仁和周嵩周仲智（仲治）是两兄弟，前已多见。周顗“性宽裕”，周嵩“矜豪傲慢”“亮直”。周顗曾上表自称“臣退自循省，学不通一经，智不效一官，止足良难，未能守分，遂忝显任，名位过量”，周嵩曾上表自称“四凶在朝，碌碌之臣”。  
+- *还面*：估计是当时的口语，翻脸。可删。  
+- *蜡烛*：汉代以前的烛是指火把。汉代蜡烛还很罕见，主要用油灯。在古代蜡烛基本都是珍贵的东西，曾经是皇帝赐给亲信和大户人家结婚时偶尔使用的物品，南北朝时庾信写过“洞房花烛明，燕余双舞轻”，中唐韩翃“春城无处不飞花，寒食东风御柳斜。日暮汉宫传蜡烛，轻烟散入五侯家”。民众普遍使用蜡烛是民国以后的事了，即使上世纪70年代，没电的时候我们还是使用油灯而很少蜡烛。  
+- *阿奴*：当时对家中男孩子的昵称。《孙子兵法》中说：“上兵伐谋，其次伐交，其次伐兵，其下攻城”， 在“火攻”篇中说：“主不可以怒而兴师，将不可以愠而攻战”。周顗的大意估计是：阿弟你因为名声不如我而发怒用火攻，这个做法本来是出下策哦。  
+
+## 6.22  
+>顾和始为扬州从事，月旦当朝，未入顷，停车州门外。周侯诣丞相，历和车边，和觅虱，夷然不动。周既过，反还，指顾心曰：“此中何所有？”顾搏虱如故，徐应曰：“此中最是难测地。”周侯既入，语丞相曰：“卿州吏中有一令仆才。”  
+
+- *顾和*：前已多见，王导任扬州刺史时，任命他和许璪为从事。  
+- *月旦*：每月的初一。古时候朝廷初一和十五是大朝会，而且时间很早，大都是凌晨4、5点。王导位列三公，有开府的权力。  
+- *未入顷*：今人吴金华认为，顷就是刻、际，还没进去的时候。  
+- *州门*：应该是指府门。  
+- *觅虱*：嵇康《与山巨源绝交书》中写自己“性复多虱，把搔不已”。鲁迅曾经说，魏晋名士多服用五石散，“皮肤易破，不能穿新的而宜于穿旧的，衣服便不能常洗。因不洗，便多虱。所以在文章上，虱子的地位很高，‘扪虱而谈’，当时竟传为美事”。而周作人《虱子》和钱钟书《管锥篇》曾引用各种笔记专门谈论虱子的问题，他们也许对鲁迅的观点不以为然，在当代以前，即使魏晋以前还是以后、古今中外，虱子也是人生的伴侣之一，是过去人们卫生条件不好的产物，而不是名士的专利。  
+- *夷然不动*：周顗当时是尚书左仆射、吏部尚书，而顾和在大庭广众之下抓虱子没感到难为情，认识他但没有表示出必要的礼貌，周顗就有点纳闷，回过头来问顾和：你心里面装的是什么啊？  
+- *此中最是难测地*：《礼记-礼运》“人藏其心，不可测度也，美恶皆在其心，不见其色也”，意思是说，人会隐藏自己的心思，旁人不能揣度，喜欢赞美和厌恶的情感都藏在心中，看不到也听不见。《庄子-杂篇-列御寇》“凡人心险于山川，难于知天。天犹有春秋冬夏旦暮之期，人者厚貌深情”，大意是说，人心比山川还要险峻，知人比知天还难。天还有春夏秋冬早晨晚上的周期变化，可人深藏其思想感情，不流露于外表或言辞。顾和的意思应该是指我的心思宽广难测，因为在《世说新语-排调》中有个类似的故事，“王丞相枕周伯仁膝，指其腹曰：‘卿此中何所有？’答曰：‘此中空洞无物，然容卿辈数百人。’”空洞无物就是难以测度的意思。  
+- *令仆*：尚书令和尚书仆射等官职，宰相的才能，周顗赞赏顾和的自然从容和思维敏捷，他认为这是当宰相的基本素质。周顗的风采固然让当时的人赞誉，但其见识却让用“火攻”的弟弟周嵩批评，在稍后的“识鉴”中有这么一段言论：  
+>有一次周顗全家喝酒，这三兄弟的母亲自豪地说：“我们原是渡江过来，无所依托，没料到你们兄弟个个都显贵了，站在我眼前，我还有什么忧虑的呢！”周嵩哭着说：“恐怕不像您说的那样。周顗志大而才疏，名声大却见识糊涂，喜欢乘人之危，这不是保全自己的办法。我周嵩性情耿直，也不被社会所容。只有小弟周谟平庸无能，将会服侍在你眼前。”  
+
+举止从容，不滞于物的气度远远比其他德行、方正等更能代表魏晋风度，而前面五章的很多内容，都可归到“雅量”这个特殊词汇之中。  
+
+## 6.23  
+>庾太尉与苏峻战，败，率左右十余人乘小船西奔。乱兵相剥掠，射，误中舵工，应弦而倒，举船上咸失色分散。亮不动容，徐曰：“此手那可使著贼！”众乃安。  
+
+- *庾太尉*：庾亮。前已介绍，325年，晋明帝司马绍去世，晋成帝司马衍5岁即位，舅舅庾亮、王导、卞壸辅政。326年，庾亮诛杀南顿王、骠骑将军司马宗，司马宗手下卞阐逃亡到苏峻处。苏峻本来在江北，“本以单家，聚众干扰攘之际”，门第与品格均不得入于士流，但因为平定王敦之乱有功，进卫建康，大破钱凤兵，奠立了灭王敦胜利基础，于是事后，苏峻晋升为使持节、冠军将军、历阳内史，封邵陵公，建康北面门户由苏峻守护。庾亮一心要振兴皇权，对流民帅一直严密防制，持打压态势，于是认定苏峻其后必为祸患，决心先下手为强。327年，庾亮认为苏峻在外迟早生乱，想下诏征他来朝廷。他跟王导商量，王导不同意，认为征召他，他肯定不会来，后果难料，不如暂时保持原状。庾亮不听。庾亮召集群臣议事，说苏峻迟早要反，迟反不如早反，不如就把他逼反，跟当年七国之乱一样。卞壸反对，说苏峻手握强兵，离京师又近，逼反他，朝廷没有制服他的把握，要从长计议。庾亮不从。于是朝廷多次下诏要苏峻来建康当官，苏峻说情愿驻守青州荒郡，来朝廷当大司农实在吃不消。于是苏峻联合祖约等人，以诛杀庾亮的名义兴兵攻打建康。大多数领导一般都以为自己是十项全能，庾亮自然也不例外，以为自己军事才能了得，但那并非事实，甚至庾亮亲自率兵在建康城外，打算与苏峻决一死战，没接战士兵们都跑光了，庾亮只好夺路狂奔，去投奔老朋友温峤。  
+- *此手那可使著贼*：这射艺那肯定能够射中敌人。庾亮一箭射乱兵，误中舵工，箭法实在太好，大家一怕船不会动了，二怕庾亮的第二箭。庾亮就开玩笑说，我一射一个准，这样的手段，敌人哪里挡得住啊！不过射的主语不清，也可能是别人射的，反正大家都怕。放松紧张情绪的好办法不是上洗手间，而是开个玩笑。而在紧张时刻能开玩笑的，那就是能置生死于度外的气量。庾亮不怕骑的卢马，能够临危不惧，这可能与玄学思想有密切关系。  
+宗教处理生死问题往往是期待来世天堂，而汉民族处理生死问题，高明之士往往会受庄子思想的影响，齐万物等生死。《庄子-齐物论》中说：予恶乎知悦生之非惑邪！予恶乎知恶死之非弱丧而不知归者邪！予恶乎知夫死者不悔其始之蕲生乎？大意是说：我怎么知道贪恋活在世上不是困惑呢？我又怎么知道厌恶死亡不是年幼流落他乡而老大还不知回归呢？我又怎么知道那些死去的人不会后悔当初的求生呢？  
+法国加缪说过，对尚未克服死亡恐惧感的人，是无自由可言的。自由只有一种：与死亡携手，共赴纯净之境，于是一切都不成问题。
+
+## 6.24  
+>庾小征西尝出未还。妇母阮，是刘万安妻，与女上安陵城楼上。俄顷翼归，策良马，盛舆卫。阮语女：“闻庾郎能骑，我何由得见？”妇告翼，翼便为于道开卤簿盘马，始两转，坠马堕地，意色自若。  
+
+- *庾小征西*：庾翼，庾亮的弟弟。庾亮曾任征西将军，他死后，庾翼任征西将军，所以称小征西。  
+- *刘万安*：刘绥，在“赏誉”中庾亮（或庾琮）夸他“灼然玉举”、“千百人中都引人注目”，据说武艺娴熟，官至骠骑长史。在“品藻”中王导曾经评价王羲之，“遗少何缘复减万安耶”，都说明刘绥在当时很出挑。他妻子阮幼娥。  
+- *安陵*：地名。陕西、河北、河南等都有安陵，或作“安陆”，湖北江夏郡所，当时庾翼是荆州刺史。  
+- *庾郎能骑*：阮幼娥丈夫刘绥弓马娴熟，她也想看看女婿的技能。也许说明东晋门阀制度产生的所谓名士将领，他们的军事基本功有点问题，譬如庾亮的箭术、庾翼的骑术，他们这两次的临场发挥都不好。  
+- *何由*：怎能。谢灵运诗：“美人游不还，佳期何由敦？” 《宋书-沈庆之传》：“陛下今欲伐国，而与白面书生辈谋之，事何由济？”  
+- *卤薄*：仪仗。宋叶梦得 《石林燕语》卷四：“唐人谓卤，櫓也，甲楯之别名。凡兵卫以甲楯居外为前导，捍蔽其先后，皆著之簿籍，故曰‘卤簿’”。  
+- *盘马*：类似策马回旋的盛装舞步。见“5•12” “大夏门下盘马”。  
+庾翼表演出洋相但毫不在意，遇到挫折后气度通达，荣辱皆忘，而不是没有羞耻感。不过这种界限很模糊，需要意会。冯梦龙《笑府》中记载了一个故事，医家医死了人，被病家用绳子捆住，待安置好死人再报官。医生半夜弄断绳子，急奔回家。病家追赶。前遇一河，医生不畏酷寒，扑通跳下河，游泳回家。此时见儿子正在灯下看医书，就一把抓起把书扔了，说：“我儿，医书先不急着看，学游泳最要紧。”这个医生庶几得晋人的忘情之意。
+
+## 6.25  
+>宣武与简文、太宰共载，密令人在舆前后鸣鼓大叫。卤簿中惊扰，太宰惶怖，求下舆。顾看简文，穆然清恬。宣武语人曰：“朝廷间故复有此贤。”  
+
+晋穆帝司马聃时期，当时桓温是太尉，司马昱是抚军大将军、司徒（那时候还没当皇帝），司马晞是太宰（司马昱的兄弟）。桓温搞吓人的小把戏，司马晞惊慌而司马昱不动声色，也许是呆如木鸡（《庄子•外篇•达生》“望之似木鸡矣，其德全矣，异鸡无敢应者”，意思是说，我这只斗鸡看上去已经像木头鸡一样，德行真可说是完备了，别的鸡没有敢对战的）。  
+后来司马聃19岁去世，司马昱即位，桓温就上表告司马晞谋反、放纵儿子、“聚纳轻剽，苞藏亡命”等罪行，请求司马昱将其赐死。在简文帝的一再坚持下，司马晞被流放至新安郡。桓温看不起司马家这些无能之辈是有的，但说是这次试探是为篡位做准备未免言过其实。而且这次试探后，刘孝标在注中引用，桓温发出“厉害了，我的司马昱”的感慨，进而“温服惮也”，这也是意淫强晋的病症。司马昱在位8个月，“忧愤而崩”，甚至可以说被桓温吓死了。  
+
+## 6.26  
+>王劭、王荟共诣宣武，正值收庾希家。荟不自安，逡巡欲去；劭坚坐不动。待收信还，得不定，乃出。论者以劭为优。  
+
+- *王劭、王荟*：王导的两个儿子。当时去拜访桓温。  
+- *庾希*：庾亮的侄子，庾冰的长子，曾任北中郎将，徐、兖二州刺史，他妹妹是晋哀帝司马奕的皇后。371年，桓温废黜司马奕，立简文帝，然后指认庾希、庾倩等谋反，庾倩等被杀。庾希逃逸避难，后起事被杀。  
+- *收信*：收押庾家的使者（官员）。    
+- *得不定*：有学者认为，意思是得知事情还没有最终结果（庾希跑路了）。但有学者认为“不”为衍字，还有学者认为“不”或为“小”字，总的意思就是得到比较确切情况才离开。  
+在桓温抄庾家的大事件中，王荟君子不立危墙，想回家避避风头。而王劭作为政坛的重要人物，八卦心够强，即便桓温这时候不出面接待，也一定要打听完消息后才走，表现出镇定稳重。  
+
+## 6.27  
+>桓宣武与郗超议芟夷朝臣，条牒既定，其夜同宿。明晨起，呼谢安、王坦之入，掷疏示之。郗犹在帐内。谢都无言，王直掷还，云：“多！”宣武取笔欲除，郗不觉窃从帐中与宣武言。谢含笑曰：“郗生可谓入幕宾也。”  
+
+371年是东晋中期的政坛大变局之年，起因却在369年桓温第三次北伐的枋头之战。该战役由于各种原因，桓温军大败。心腹参军郗超和他讲：“你担负着天下重任，现在已经60岁了，却失败于大规模的军事行动。如果不建立非常功勋，就不足以镇服和满足百姓的愿望！建议效仿伊尹、霍光，废黜君主，这样就可以建立大威权，镇压四海。”桓温温深以为然，遂与之定议。  
+由于东晋的门阀政治，桓温的兵败甚至成为他向同事发难的机会和条件。他兴兵前，先把郗超的父亲、徐、兖二州刺史郗愔安置到会稽，自己兼领刺史，安排部将刘波领五千人镇石头城，在军事上控制了建康政府；兵败后归罪于粮运不继的豫州刺史袁真（庾氏旧部），任命长子桓熙为刺史，以军事的失败赢得政治的胜利，最终获得了控制东晋王朝的军事力量，实现了桓温以北伐为名，增进自身实力和威望的目的。从此以后，“政由桓氏，祭由寡人”，朝廷大事，只要桓温和郗超商量着就可以决定。  
+371年11月13日，桓温拜见褚太后，请求废掉司马奕，另立丞相司马昱为帝。11月17日，桓温命其弟桓秘逼迫新蔡王司马晃到太极殿西堂去自首，自称与武陵王司马晞及子综、著作郎殷涓、太宰长中庚倩、散骑常侍庚柔等谋反。19日，桓温处死东海王三子及其母。20日，桓温欲诛武陵王司马晞，但简文帝不许，桓温遂废武陵王及其三子的封号，徙至淳安。同时，免新蔡王司马晃为庶人，族诛殷涓、庾倩、庾柔等。  
+- *王坦之* 前已多见，年轻时与郗超齐名，有谚语“盛德绝伦郗嘉宾，江东独步王文度”。他担任过桓温的参军，和桓温也是儿女亲家，“敦儒教，颇尚刑名学”，其性格算得上“方正”。故毫不客气地认为桓温要杀的大臣太多了，桓温准备有所收敛。  
+- *郗超* 当时已经是中书侍郎，不再是桓温的参军。谢安一语双关，一则讽刺郗超还是桓温的幕僚，请你摆正位置哦；二则讥讽郗超和桓温是基友，两人要注意性取向哦！  
+此条似与雅量无涉。但也许面临这么大的事情，谢安还敢开玩笑，足见其胆量，也算是雅量。  
+372年，简文帝司马昱去世，52岁；373年，桓温去世，61岁；375年，王坦之去世，45岁；378年，郗超去世，42岁。寿命是古人的天敌，多少光复蓝图，抱负壮志都成了未竟事业，都付了这断墙残垣，唯有“绝壁天悬，腾波迅急”。  
+
+## 6.28  
+>谢太傅盘桓东山，时与孙兴公诸人泛海戏。风起浪涌，孙、王诸人色并遽，便唱使还。太傅神情方王，吟啸不言。舟人以公貌闲意说，犹去不止。既风转急，浪猛，诸人皆喧动不坐。公徐云：“如此，将无归？”众人即承响而回。于是审其量，足以镇安朝野。  
+
+- *盘桓*：徘徊引申为暂时居住。在360年前，谢家有谢尚、谢奕、谢万先后任豫州刺史，谢安“六七年间征召不至”。后因谢万兵败被黜，谢安不得不为家族计，出任桓温的司马和吴兴太守等，以保全门户。  
+东山是绍兴上虞的一个小丘陵，我曾经特意去看过一次，山下现在造了一个宾馆，山腰有谢安纪念馆，山顶是一座庙宇。上虞离东海较远，但钱塘江很宽阔，在晋代估计还要宽阔的多，当地人把钱塘江叫海，两岸叫海涂。曹植是比较早写东海的诗人：“东海广且深，由卑下百川。五岳虽高大，不逆垢与尘。良木不十围，洪条无所因。长者能博爱，天下寄其身……”  
+- *孙兴公*：孙绰，前已多见，文学家，比谢安大3岁。王估计是王羲之，比谢安大10几岁，当时称病辞职，“遍游东中诸郡，穷诸名山，泛沧海”，他给谢万的信中也写道：“比当与安石东游山海，并行田视地利，颐养闲暇。”  
+- *遽*：遽惶，惊恐。  
+- *唱*：费解，要么是大声叫，要么是倡议。  
+- *神情方王*：精神兴致正旺盛。  
+- *说*：通“悦”。  
+- *将无*：前已多见，应该，莫非等表肯定的猜测性语气。  
+
+远足泛海足以陶冶性情。“魏晋风流”摆脱了儒家学说的知其不可而为之的入世情怀和追求功名的虚伪无耻，也不是佛教因对苦难的恐惧而试图通过冥想自闭获得肉体的解脱，他们站上高山之巅，处于海浪之中，上升为更为玄远的自然和人格融于一体的情怀追求。魏晋时期最杰出的代表，他们继承和发展庄子的思想，不刻意去迎接宏伟的人生挑战，去思考为未来留下什么，而是倾听心灵和自然的声音。就像谢安，凡事不紧张，即使无可奈何也要表现出不紧张，其心态对风浪处于怕与不怕之间，对事业处于用与不用之间，若即若离。  
+这个故事还有一个版本：桓宣武在南州，与会稽王会于溧洲。于时漾舟江侧，谢公亦在。狂风忽起，波浪鼓涌，非人力所制，桓有惧色，会稽王亦微异，惟谢公怡然自若。顷间风止，桓问谢曰：“向那得不惧？”谢徐笑答曰：“何有三才同尽理（哪里会有老天安排我们三个有才华的人同归于尽的道理）。”（《太平御览•卷七十一》）  
+
+## 6.29  
+> 桓公伏甲设馔，广延朝士，因此欲诛谢安、王坦之。王甚遽，问谢曰：“当作何计？”谢神意不变，谓文度曰：“晋阼存亡，在此一行。”相与俱前。王之恐状，转见于色；谢之宽容，愈表于貌。望阶趋席，方作洛生咏，讽“浩浩洪流。”桓惮其旷远，乃趣解兵。王、谢旧齐名，于此始判优劣。  
+
+自371年以来，桓温采取了很多政治、军事行动罢黜和诛杀异己，另立新帝把持朝政，引发了一系列的抵抗和不合作。因为他长期以军事首脑的身份活动，加上东晋特殊的政治体制，并没有能在南京建立起他的政治班底，更也不能放任他的军事力量，所以以大司马的身份镇姑孰，并不在中央。  
+372年7月，简文帝司马昱去世前夕，一日一夜共发了四次诏书，急召桓温入朝。但桓温在那个时候如果不想推翻政权，就不可能带兵进入南京，所以他表现的很犹豫，甚至还梦想简文帝能禅位给他。而简文帝的遗诏经过太原王坦之的力争，从原来的“依周公居摄故事。少子可辅者辅之，如不可，君自取之”改成了“家国事一禀大司马，如诸葛武侯、王丞相故事”。第二天简文帝驾崩，群臣立嗣，有人说要请桓温来定夺。琅邪王彪之说：“天子崩，太子代立，大司马何容得异！若先面咨，必反为所责。”朝议乃定。而后本来要按照遗诏请桓温回来做丞相了，但是王彪之继续说：“这么大的事情，桓温一定会坚决推辞的，这样就会耽误国家大事，造成更严重的后果，因此太后的命令不能执行，只能原封不动地还回去。”就连遗诏的事情也就这样黄了。  
+在中央变动之际，桓温没有从安徽当涂赶回南京。  
+直到373年2月，桓温带兵入朝，拜谒皇陵，摆下了传说中的鸿门宴。但一切都没发生，桓温在京师呆了14天后患病，就率部返回了当涂，7月去世。这个故事认为，“鸿门宴”平和，主要是谢安风采过人，靠一首嵇康的《赠秀才入军》平息了一场军事政变。  
+- *望阶趋席*：到台阶上就快步入座。  
+- *洛生咏*：西晋时期，洛阳一带的书生在吟诗时，常常采用一种语调，其发音方法和腔调特征带有明显的洛阳方音气息，称之为洛生咏。  
+- *趣*：通“促”，快速。  
+
+在酒宴中埋伏刀斧手，最后主人居然没有采取行动，理由是“害怕谢安的志趣旷达高远”，没有可信度，无非就是民间演义的套路。
+
+## 6.30  
+>谢太傅与王文度共诣郗超，日旰未得前。王便欲去，谢曰：“不能为性命忍俄顷？”  
+
+郗超是流民帅、太尉、司空郗鉴的孙子。郗鉴“虽在公位而冲心愈约，劳谦日厌，诵玩坟索，自少及长，身无择行。家本书生，后因丧乱，解巾从戎，非其本愿，常怀慨然”，他起家于流民，长镇京口，跻身门阀，并有所建树。其儿子郗愔平生没有什么出众的业绩，孙子郗超自幼“卓荦不羁，有旷世之度”。郗超年青时就入桓温幕府，桓温常说郗超深不可测，倾意礼待。郗超也和桓温结下忘年交，成为其左膀右臂。371年以后，桓温驻军在当涂，朝廷中由郗超担任中书侍郎，是桓温在朝中的代理人，一言可决人之进退生死。即使刚正峻整的王坦之，浩浩洪流的谢安石都得仰其鼻息。王坦之一时忍不住，是因为郗超和他年龄经历相仿，有比较之心。而谢安大郗超16岁，以桓温的接班人自诩，所图甚大，并不介意再忍一忍。  
+雅量有时候是修养品性所得，有时候是志向器局而成。我的追求是捍卫世界和平，怎么会因为前面有人插队而勃然变色呢？  
+
+## 6.31  
+>支道林还东，时贤并送于征虏亭。蔡子叔前至，坐近林公；谢万石后来，坐小远。蔡暂起，谢移就其处。蔡还，见谢在焉，因合褥举谢掷地，自复坐。谢冠帻倾脱，乃徐起，振衣就席，神意甚平，不觉瞋沮。坐定，谓蔡曰：“卿奇人，殆坏我面。”蔡答曰：“我本不为卿面作计。”其后二人俱不介意。  
+
+- *支遁 支道林* 前已多见，曾长期居住在南京东南方的绍兴。362年，晋哀帝下诏让他进京宣讲佛法，3年后会稽郡。支遁在当时有很高的声望，他是最早将玄学和佛学贯通结合的学者之一。就学识而言，由于能较早与外来优秀文化的融汇，谢安夸支遁说：“嵇康须不断努力，才能赶上支遁。” 郗超说：“支遁神理所通，玄拔独悟。数百年以来，绍明大乘佛法，令真理不绝，唯此一人而已。”  
+一般而言，儒家、道家文化的特点之一是跳跃性思维，逻辑性不强，常常充斥着概念混乱、诡辩和无法自洽，而佛教与之相比表现出相当高的思辨水平，在其经典进入中国后就引起了学者的高度兴趣，很自然地会将其与本土文化相结合，来丰富玄学，同时推动佛教中国化。支遁为《逍遥游》作注，超越了郭象和向秀，东晋以后学者谈《庄子》都采用“支理”。  
+他在南京居住3年，估计是身体情况不佳要回绍兴，因为谢安曾经邀请他去吴兴养病：“人生如寄耳，顷风流得意之事，殆为都尽，终日戚戚，触事惆怅，唯迟君来，以晤言消之，一日当千载耳。此多山县，闲静差可养疾，事不异剡，而医药不同。必思此缘，副其积思也。” 支遁交游很广泛，在《世说新语》中就起码有十几个好朋友，周旋于玄学名流与达官贵人中，此次有很多人来送行。征虏亭位于长江附近，东晋时要人出都坐船，大都从此出发。  
+- *蔡子叔*：蔡系，东晋初重臣、司徒蔡谟的儿子。  
+- *谢万石*：此处不确，谢万361年已经去世了，应该是谢安。《高僧传•支道林传》中也记载是谢安。  
+- *合褥举谢掷地*：把谢安连人带坐垫一把举起扔在边上。  
+- *不觉瞋沮*：没有感到愤怒或沮丧。  
+- *奇人*：清人王先慎说，奇人就是闲人的意思，因为《韩非子•十过》里说：“有奇人者使治城郭之缮”。谢安和蔡系互相称卿：“你这个闲人，差点弄伤我的脸！”蔡系说：“我根本没考虑过你的脸面！”  
+唐代娄师德的唾面自干无非是个比喻，而谢安能忍到这个地步，事后也没有什么官场报复行为，而且我们也多次看到前面几则故事中不少人被打而不动气，要理解他们有点难度。他们又不是人民子弟兵，没有“骂不还口，打不还手”的组织纪律，也不会因此得到表彰。  
+孔子本人不怎么讲忍，他讲“知耻近乎勇”，谈忍还是为了图大谋，“小不忍则乱大谋”；至少是要替自己和家人的安全想想，“一朝之忿，忘其身以及其亲，非惑欤？”孔子是个勇敢的人，一看到人家越礼就“是可忍孰不可忍”，一看到学生睡午觉就破口大骂粪土朽木，认为要以直报怨。他的图大谋和安全发展到后来成了无耻或残忍。孟子讲的多的是“不忍”，他的忍就是对欲望的自律，是仁，是恻隐同情，类似于佛教的慈悲。  
+而老子的忍根本就是统治术中的权谋，目的就是要胜，“柔之胜刚，弱之胜强”。而庄子根本不谈情绪问题，齐物论本来就是万物不系于心，在伪托的《庄子•外篇》中有个譬喻：方舟而济于河，有虚船来触舟，虽有惼心之人不怒，有一人在其上，则怒张歙之，一呼而不闻，再呼而不闻，于是三呼邪，则必以恶声随之。向也不怒而今也怒，向也虚而今也实。人能虚己以游世，其孰能害之!"意思是说，如果撞到空船人不会生气，如果对方的船上有人就会恶语相加。那么就当没有人，还有什么能伤害你的呢？  
+佛教最推崇忍，《大宝积经》中说：“忍辱为十力之本，诸佛神通之原，无碍智大悲皆以忍为本。”，还说“六度万行，忍为第一”等。它诱导信徒要忍，首先是忍了就偿还了业债，对自己有好处；其次，它的世界观认为一切都是空无，不必介意；三是嗔怒本来就是烦恼心，能不介意自然生喜欢心。  
+魏晋风流，名士往往能忍人所不能忍，很大一部分愿意是玄佛思想的合一和发展，是一种人格修养。但它以后逐渐成为大多数中国人的一种恶劣的品性，但和雅量风流已经没有任何关系了，令人失望。以至于罗素说，中国人的忍耐令人吃惊，“在我快要离开中国之前，有一位著名的中国作家诚恳地要求我谈谈中国人性格的主要缺点。我以犹豫的心情谈了三点：贪婪，懦弱，缺乏同情心。”  
