--- a/01-shishuo.Rmd
+++ b/01-shishuo.Rmd
@@ -1,10 +1,12 @@
-# 序 {-#Intro}  
+# 序 {-#Intro}
+
 白天，我常常是在写讲话稿和公文。晚上，一般就是打游戏和看书了。现在在玩《精忠报国岳飞传》，令人绝望的游戏，陆陆续续打了有一年了吧，即使用了修改器还是反反复复save-load，所以不但不能弥补工作中缺乏的成就感，反而更加郁闷。  
 君子疾没世而名不称，为了使自己活得更有意义些，总得找点事干，我突然打算在网上对《世说新语》进行解释。当然，有不少学者对《世说新语》进行了校注、笺疏，似乎没有必要重复劳动，不过这些学者的书籍多为繁体竖排本，多用文言，对普通人阅读有一定的障碍；其次，有一些译注或考虑版权问题，白话本的翻译往往过于简单、丧失文雅，不能很好地使读者了解人物、故事的背景，使《世说》成为平淡的书，不能让人满意；还有，《世说》人物繁多，又常常变换使用名、字、封地、号什么的，让普通读者摸不着头脑。而我恰巧少年时期在书籍中度过，又陆续收集了几十本关于魏晋的书，现在又有互联网搜索的便利，吾乡有句谚语：“山高高不过树，路长长不过步”，即使我写的再不如人意，但比从前的总有些优势。这些因素使我下了这个决心。当然，还有一个小小的愿望，我的孩子平时是由母亲和妻子抚养，除了休息日，我甚至很少和他见面，他的童年比我更加贫乏和封闭，我注释《世说》，希望他在长大一点后阅读，从而理解他的父亲，对现实世界保持一定的热情和一定的距离。每个人都走在各自的路上，即使我这点愿望或许是泡影，但总得做出一点努力。  
 所以，这本网络书首先献给我的孩子和那些怀着我一样想法的父亲；其次献给一位厦门的网友，她看着我打字已有三年时间，我颇为感激；最后要献给我的父亲，他让我的童年在图书馆长大，并从不吝啬地满足我购买书籍的要求（居然包括古代艳情小说。现在回忆起来，是多么古怪的父亲！），尽管现在他已经退休回老家种菜，似乎再也不看书了。  
 在写作过程中，网友们给了我鼓励，希望我不要做下面没有的人。是啊，大多数人总是希望做事善始善终，我也多么希望在一两年后，通过打字得到内心的满足，最后喊出“Game over”，再开始另一场追逐。  
 
-# 德行 {#01}  
+# 德行 {#One}
+
 ## 1.1  
 >陈仲举言为士则，行为世范,登车揽辔，有澄清天下之志。为豫章太守，至，便问徐孺子所在，欲先看之。主簿白：“群情欲府君先入廨。”陈曰：“武王式商容之闾，席不暇暖。吾之礼贤，有何不可！”  
 
@@ -120,7 +122,7 @@
 ## 1.10  
 >华歆遇子弟甚整，虽闲室之内，严若朝典。陈元方兄弟恣柔爱之道。而二门之里，两不失雍熙之轨焉。  
 
-- *华歆*：字子鱼，山东高唐人。高唐，有名的地方，大家可能读过《高唐赋》吧？没读过？不要紧，总听说过云雨之欢的成语，挺色情的，据说就在高唐楚王做的春梦，梦中情人是巫山的女神。楚王估计妻妾不少，但没有禁忌的快感，就打神仙的主意。不过此高唐未必就是彼高唐。歆本义是古代祭祀时所用的祭品，其中估计有鱼；当然，也可以作其他理解，歆还有个意思是羡慕，《庄子》中曾经说“鱼出游从容,是鱼之乐也”，在《淮南子》中也说“临河而羡鱼，不如归家结网”，像孔子的儿子孔鲤字伯鱼，宋襄公有个弟弟也叫子鱼，都说明那些古人羡慕的对象之一是鱼，或清蒸或红烧，或相忘于江湖，都是快乐的事情。华歆同邴原、管宁曾经是同学，都有些名声，当时人们称他们三人为一龙，华歆是龙头，邴原是龙腹，管宁是龙尾。裴松之说这三人品行有高低，头尾应该换换；洪亮吉说，这是按三人年岁排序的，并没有高低之分。华歆官当得很大，曹丕当皇帝后，他就坐上了丞相的位置，前面我介绍陈群的故事中他出现过的。华歆对钱看的不是很重，“家无担石之储”，但为人很上进，《三国演义》中曹操要杀献帝的老婆伏皇后，叫华歆去执行这个大逆不道的光荣任务，伏皇后躲在壁橱里，华歆眼尖，自己动手把皇后拉了出来，处死。  
+- *华歆*：字子鱼，山东高唐人。高唐，有名的地方，大家可能读过《高唐赋》吧？没读过？不要紧，总听说过云雨之欢的成语，挺色情的，据说就在高唐楚王做的春梦，梦中情人是巫山的女神。楚王估计妻妾不少，但没有禁忌的快感，就打神仙的主意。不过此高唐未必就是彼高唐。  歆本义是古代祭祀时所用的祭品，其中估计有鱼；当然，也可以作其他理解，歆还有个意思是羡慕，《庄子》中曾经说“鱼出游从容,是鱼之乐也”，在《淮南子》中也说“临河而羡鱼，不如归家结网”，像孔子的儿子孔鲤字伯鱼，宋襄公有个弟弟也叫子鱼，都说明那些古人羡慕的对象之一是鱼，或清蒸或红烧，或相忘于江湖，都是快乐的事情。  华歆同邴原、管宁曾经是同学，都有些名声，当时人们称他们三人为一龙，华歆是龙头，邴原是龙腹，管宁是龙尾。裴松之说这三人品行有高低，头尾应该换换；洪亮吉说，这是按三人年岁排序的，并没有高低之分。  华歆官当得很大，曹丕当皇帝后，他就坐上了丞相的位置，前面我介绍陈群的故事中他出现过的。华歆对钱看的不是很重，“家无担石之储”，但为人很上进，《三国演义》中曹操要杀献帝的老婆伏皇后，叫华歆去执行这个大逆不道的光荣任务，伏皇后躲在壁橱里，华歆眼尖，自己动手把皇后拉了出来，处死。  
 遇：对待。  
 - *整*：整齐、严肃。  
 - *闲室*：家中。  
@@ -586,7 +588,8 @@
 《世说》中的德行内容，大约都是以孔子门下以德行著称的学生为范本。颜回“一箪食、一瓢饮、在陋巷，不改其乐”，闵损对后母很孝顺，父亲要休妻，他劝说“母在一子寒，母去三子单”（后母又生了两个孩子），并且视官职、金钱“如坛土矣”，冉耕尊师重道，冉雍“通则一天下，穷则独立贵名，天不能死，地不能埋，桀跖之世不能污”，有南面而为诸侯大宰的能力。这一些关于道德的内容，大体就反映在这一章节中。当然，颜回的木讷和善于吹捧，闵损的受虐倾向，冉耕的认真拘泥，也一样可以从《世说》“德行”章中找到他们的影子，为《世说》平添了更让人推敲的趣味。是啊，我们站在高处，我们的内心更加精细、复杂，也更加迷茫。但是，我在解释《世说》的时候，也是摆脱尘世杂念的美好时刻，常常处以微笑和宁静之中——我伸手，抓住了两个世界。是为记。  
 
 
-# 言语 {#02}    
+# 言语 {#two}
+
 ## 2.1    
 >边文礼见袁奉高，失次序。奉高曰：“昔尧聘许由，面无怍色。先生何为颠倒衣裳？”文礼答曰：“明府初临，尧德未彰，是以贱民颠倒衣裳耳！”  
 
@@ -1896,7 +1899,8 @@
 
 “言语”一章我整整一年才完成，有的写得还比较草率，不少网友还依旧关注一个不起眼的帖子，给我勉励，实在让我有点不好意思。嗯，一年时间，“天翻地覆慨而慷”，现实中三大战役已经打完，游戏中我三国也统一了N遍，希望今后我能“宜将剩勇追穷寇”，不辜负网友的情义。  
 
-# 政事 {#03}  
+# 政事 {#three}
+
 ## 3.1  
 >陈仲弓为太丘长，时吏有诈称母病求假，事觉，收之，令吏杀焉。主簿请付狱考众奸，仲弓曰：“欺君不忠，病母不孝；不忠不孝，其罪莫大。考求众奸，岂复过此！”  
 
@@ -2212,7 +2216,8 @@
 
 《政事》中还有几则是赞赏王导善于待人接物，山涛有识人之明，陆玩敢于“翻异”等，我们都可以想见前辈的风范。细读《政事》，我们平心而论，里面故事归类有些有点问题，也许放在语言、识鉴、排调等可能更恰当一些，不过我们在读《论语》等的时候，也没读出子路、冉有有什么政事之长，不必苛责。  
 
-# 文学 {#04}  
+# 文学 {#four}
+
 ## 4.1  
 >郑玄在马融门下，三年不得相见，高足弟子传授而已。尝算浑天不合，诸弟子莫能解。或言玄能者，融召令算，一转便决，众咸骇服。及玄业成辞归，既而融有‘礼乐皆东’之叹。恐玄擅名而心忌焉，玄亦疑有追，乃坐桥下，在水上据屐。融果转式逐之，告左右曰：“玄在土下水上而据木，此必死矣。”遂罢追。玄竟以得免。  
 
