--- a/01-shishuo.Rmd
+++ b/01-shishuo.Rmd
@@ -122,7 +122,8 @@
 ## 1.10  
 >华歆遇子弟甚整，虽闲室之内，严若朝典。陈元方兄弟恣柔爱之道。而二门之里，两不失雍熙之轨焉。  
 
-- *华歆*：字子鱼，山东高唐人。高唐，有名的地方，大家可能读过《高唐赋》吧？没读过？不要紧，总听说过云雨之欢的成语，挺色情的，据说就在高唐楚王做的春梦，梦中情人是巫山的女神。楚王估计妻妾不少，但没有禁忌的快感，就打神仙的主意。不过此高唐未必就是彼高唐。  歆本义是古代祭祀时所用的祭品，其中估计有鱼；当然，也可以作其他理解，歆还有个意思是羡慕，《庄子》中曾经说“鱼出游从容,是鱼之乐也”，在《淮南子》中也说“临河而羡鱼，不如归家结网”，像孔子的儿子孔鲤字伯鱼，宋襄公有个弟弟也叫子鱼，都说明那些古人羡慕的对象之一是鱼，或清蒸或红烧，或相忘于江湖，都是快乐的事情。  华歆同邴原、管宁曾经是同学，都有些名声，当时人们称他们三人为一龙，华歆是龙头，邴原是龙腹，管宁是龙尾。裴松之说这三人品行有高低，头尾应该换换；洪亮吉说，这是按三人年岁排序的，并没有高低之分。  华歆官当得很大，曹丕当皇帝后，他就坐上了丞相的位置，前面我介绍陈群的故事中他出现过的。华歆对钱看的不是很重，“家无担石之储”，但为人很上进，《三国演义》中曹操要杀献帝的老婆伏皇后，叫华歆去执行这个大逆不道的光荣任务，伏皇后躲在壁橱里，华歆眼尖，自己动手把皇后拉了出来，处死。  
+- *华歆*：字子鱼，山东高唐人。高唐，有名的地方，大家可能读过《高唐赋》吧？没读过？不要紧，总听说过云雨之欢的成语，挺色情的，据说就在高唐楚王做的春梦，梦中情人是巫山的女神。楚王估计妻妾不少，但没有禁忌的快感，就打神仙的主意。不过此高唐未必就是彼高唐。  歆本义是古代祭祀时所用的祭品，其中估计有鱼；当然，也可以作其他理解，歆还有个意思是羡慕，《庄子》中曾经说“鱼出游从容,是鱼之乐也”，在《淮南子》中也说“临河而羡鱼，不如归家结网”，像孔子的儿子孔鲤字伯鱼，宋襄公有个弟弟也叫子鱼，都说明那些古人羡慕的对象之一是鱼，或清蒸或红烧，或相忘于江湖，都是快乐的事情。  华歆同邴原、管宁曾经是同学，都有些名声，当时人们称他们三人为一龙，华歆是龙头，邴原是龙腹，管宁是龙尾。裴松之说这三人品行有高低，头尾应该换换；洪亮吉说，这是按三人年岁排序的，并没有高低之分。  
+华歆官当得很大，曹丕当皇帝后，他就坐上了丞相的位置，前面我介绍陈群的故事中他出现过的。华歆对钱看的不是很重，“家无担石之储”，但为人很上进，《三国演义》中曹操要杀献帝的老婆伏皇后，叫华歆去执行这个大逆不道的光荣任务，伏皇后躲在壁橱里，华歆眼尖，自己动手把皇后拉了出来，处死。  
 遇：对待。  
 - *整*：整齐、严肃。  
 - *闲室*：家中。  
